Translation updates from translatewiki.net

--- a/assets/www/messages/messages-af.properties
+++ b/assets/www/messages/messages-af.properties
@@ -49,9 +49,7 @@ about-version=Weergawe
 about-copyright=(c) Die outeursreg van die program behoort aan die Wikimedia-stigting en -ontwikkelaars
 about-license=Die program is vrye sagteware onder die lisensie GNU General Public License. U mag hierdie sagteware onder bepaalde voorwaardes versprei en aanpas. Sien http://www.gnu.org/licenses/old-licenses/gpl-2.0.html vir details. Die bronkode is beskikbaar via die volgende skakel: https://github.com/Wikimedia/WikipediaMobile.
 nearby-title=Nabygeleë bladsye
-# Fuzzy
-app-description=Amptelike Wikipedia-toepassing vir Android. Wikipedia is die vrye ensiklopedie met meer as 20 miljoen artikels in 280 tale, en is die mees uitgebreide en mees gebruikte naslaanwerk wat ooit saamgestel is.\n\nFunksies: Artikels skep om later (of aflyn) te lees, Artikels in die omgewing soek, Artikels deel met die Android-funksie "Share/Deel", Artikels in 'n ander taal lees, Volskerm soektogte
+app-description=Amptelike Wikipedia-toepassing vir Android. Wikipedia is die vrye ensiklopedie met meer as 20 miljoen artikels in 280 tale, en is die mees uitgebreide en mees gebruikte naslaanwerk wat ooit saamgestel is.\n\nFunksies: Artikels skep om later (of aflyn) te lees, Artikels in die omgewing soek, Artikels deel met die Android-funksie "Share/Deel", Artikels in 'n ander taal lees, Volskerm soektogte\n\nStuur ons jou terugvoer op Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Bedoeld u:
 search-results-no-results=Geen resultate gevind nie
-# Fuzzy
-search-results-close=Sluit
+search-results-close=Sluit soekresultate
