--- a/assets/www/messages/messages-ar.properties
+++ b/assets/www/messages/messages-ar.properties
@@ -7,12 +7,17 @@
 sitename=ويكيبيديا
 spinner-loading=يُحمّل...
 spinner-retrieving=استرجاع المحتويات من $1...
+saved-pages-clear-all=امسح كل الصفحات المحفوظة
+saved-pages-close=أغلق نافذة الصفحات المحفوظة
 saved-pages-max-warning=لقد بلغت الحد الأقصى لعدد الصفحات المحفوظة.
 page-saved=تم حفظ $1.
 page-already-saved=$1 محفوظة سابقا.
 saved-page-remove-prompt=إزالة $1 من الصفحات المحفوظة؟
+clear-all-history-prompt=أأمسح التأريخ؟
+clear-all-saved-pages-prompt=أأمسح كل الصفحات المحفوظة؟
 saved-page-removed=صفحة $1 قد أزيلت.
 saved-pages-title=الصفحات المحفوظة
+menu-home=صفحة ويكيبيديا الرئيسية
 menu-language=قراءة بـ...
 menu-savePage=حفظ الصفحة
 menu-savedPages=الصفحات المحفوظة
@@ -44,14 +49,17 @@ error-not-found=عذرا، لا يوجد صفحة بالاسم المطلوب.
 error-not-found-reason=قد تكون أخطأت في تهجئة العنوان، أو لم يتم إنشاء الصفحة.
 error-search-again=الرجاء البحث عن مصطلح آخر.
 about-page-label=عنّا
+history-clear-all=امسح التأريخ
 history-title=التاريخ
+about-close=أغلق نافذة عن
 about-page-title=عن
 about-version=النسخة
-about-copyright=حقوق هذا التطبيق محفوظة (C) لمؤسسة ويكيميديا والمطورين المساهمين.
+about-copyright=حقوق نشر هذا التطبيق محفوظة (C) لمؤسسة ويكيميديا والمطورين المساهمين.
+nearby-close=أغلق نافذة الصفحات القريبة
 nearby-title=صفحات قريبة
-# Fuzzy
-app-description=تطبيق ويكيبيديا الرسمي لآندرويد. ويكيبيديا موسوعة حرة تحتوي أكثر من 20 مليون مقالة ب280 لغة وهي المرجع الأكثر شمولية والأكثر استخدامًا في تاريخ البشرية.\n\nالمزايا: حفظ المقالات لقراءتها لاحقا والبحث عن صفحات قريبة وتشارك المقالات باستخدام خاصية "التشارك" لآندرويد وقراءة المقالات بلغات أخرى والبحث.
+app-description=تطبيق ويكيبيديا الرسمي لآندرويد. ويكيبيديا موسوعة حرة تحتوي أكثر من 20 مليون مقالة ب280 لغة وهي المرجع الأكثر شمولية والأكثر استخدامًا في تاريخ البشرية.\n\nالمزايا: حفظ المقالات لقراءتها لاحقاً، والبحث عن صفحات قريبة، وتشارك المقالات باستخدام خاصية "التشارك" في آندرويد، وقراءة المقالات بلغات أخرى، والبحث بوضعية ملء الشاشة.\n\nأرسل لنا ملاحظاتك عبر تويتر @WikimediaMobile.
 search-results-did-you-mean-label=هل كنت تقصد:
 search-results-no-results=لا توجد نتائج
-# Fuzzy
-search-results-close=أغلق
+search-results-close=أغلق نتائج البحث
+search-button=ابحث في ويكيبيديا عن هذا النص
+search-placeholder=ابحث
