--- a/assets/www/messages/messages-ast.properties
+++ b/assets/www/messages/messages-ast.properties
@@ -6,12 +6,17 @@
 sitename=Uiquipedia
 spinner-loading=Cargando...
 spinner-retrieving=Cargando conteníu dende $1...
+saved-pages-clear-all=Llimpiar toles páxines guardaes
+saved-pages-close=Zarrar la pantalla de páxines guardaes
 saved-pages-max-warning=Llegasti al númberu máximu de páxines guardaes.
 page-saved=Se guardó $1.
 page-already-saved="$1" yá se guardó.
 saved-page-remove-prompt=¿Quies desaniciar "$1" de les páxines guardaes?
+clear-all-history-prompt=¿Llimpiar historial?
+clear-all-saved-pages-prompt=¿Llimpiar toles páxines guardaes?
 saved-page-removed="$1" se desanició.
 saved-pages-title=Páxines guardaes
+menu-home=Páxina principal de Uiquipedia
 menu-language=Lleer en…
 menu-savePage=Guardar la páxina
 menu-savedPages=Páxines guardaes
@@ -24,6 +29,9 @@ menu-selectText=Seleicionar testu
 menu-sharePage=Compartir la páxina
 menu-about=Tocante a
 menu-cancel=Encaboxar
+menu-output=Salida
+menu-sources=Fontes
+settings-close=Zarrar la pantalla de configuración
 settings-title=Configuración
 settings-app-version-label=Versión de l'aplicación:
 settings-android-version-label=Versión d'Android:
@@ -35,23 +43,29 @@ settings-font-size-desc=Configurar el tamañu de lletra de la páxina
 settings-font-size-smaller=Pequeñu
 settings-font-size-normal=Normal
 settings-font-size-larger=Grande
+langlinks-close=Zarrar la pantalla de llectura n'otres llingües
 langlinks-title=Lleer la páxina en…
 error-not-available=Sentímoslo, esa páxina nun ta disponible.
 error-offline=Tas desconectáu y nun guardasti la páxina primero.
+error-offline-prompt=Vuelvi a intentalo cuando teas coneutáu a una rede.
 error-saved-or-online=Pues abrir una páxina guardada o conectate y facer una gueta.
 error-not-found=Sentímoslo, nun esiste páxina dala con esi nome.
 error-not-found-reason=Seique escribisti mal el títulu, o l'artículu inda nun esiste.
 error-search-again=Guetar otru términu.
 about-page-label=Tocante a nós
+history-clear-all=Llimpiar historial
+history-close=Zarrar la pantalla del historial
 history-title=Historial
+about-close=Zarrar la pantalla «Tocante a»
 about-page-title=Tocante a
 about-version=Versión
 about-copyright=Los drechos d'autor (C) d'esta aplicación pertenecen a la Fundación Wikimedia y los desendolcadores que collaboraron
 about-license=Esta aplicación ye software llibre baxo la llicencia pública xeneral GNU. Se pue distribuir y camudar baxo ciertes condiciones. Llei http://www.gnu.org/licenses/old-licenses/gpl-2.0.html pa ver más detalles. El códigu fonte ta disponible en https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Zarrar la pantalla de páxines cercanes
 nearby-title=Páxines cercanes
-# Fuzzy
-app-description=App oficial de Wikipedia p'Android. Wikipedia ye la enciclopedia llibre que contién más de 20 millones d'artículos en 280 llingües, y ye la obra de referencia más estensa y con mayor usu que los seres humanos tengan compilao nunca.\n\nCarauterístiques: Guardar un artículu pa lleelu ensin conexón más sero, Guetar artículos averaos, Compartir artículos usando la función "Compartir" d'Android, Lleer l'artículu nuna llingua diferente, Gueta en pantalla completa
+app-description=App oficial de Wikipedia p'Android. Wikipedia ye la enciclopedia llibre que contién más de 20 millones d'artículos en 280 llingües, y ye la obra de referencia más estensa y con mayor usu que los seres humanos tengan compilao nunca.\n\nCarauterístiques: Guardar un artículu pa lleelu ensin conexón más sero, Guetar artículos averaos, Compartir artículos usando la función "Compartir" d'Android, Lleer l'artículu nuna llingua diferente, Gueta en pantalla completa\n\nMándanos comentarios a @WikimediaMobile de Twitter.
 search-results-did-you-mean-label=Quixisti dicir:
 search-results-no-results=Nun s'alcontraron resultaos
-# Fuzzy
-search-results-close=Zarrar
+search-results-close=Zarrar resultaos de la gueta
+search-button=Guetar esti testu na Uiquipedia
+search-placeholder=Guetar
