--- a/assets/www/messages/messages-br.properties
+++ b/assets/www/messages/messages-br.properties
@@ -6,12 +6,17 @@
 sitename=Wikipedia
 spinner-loading=O kargañ...
 spinner-retrieving=Oc'h adtapout boued adalek $1...
+saved-pages-clear-all=Diverkañ an holl bajennoù enrollet
+saved-pages-close=Serriñ holl skrammoù ar pajennoù enrollet
 saved-pages-max-warning=Tizhet ganeoc'h an niver brasañ a bajennoù enrollet.
 page-saved=$1 enrollet.
 page-already-saved=$1 a zo bet enrollet c'hoazh.
 saved-page-remove-prompt=Dilemmel $1 deus ar pajennoù enrollet ?
+clear-all-history-prompt=Diverkañ an Istor ?
+clear-all-saved-pages-prompt=Diverkañ an holl bajennoù enrollet ?
 saved-page-removed=Lamet eo bet $1.
 saved-pages-title=Pajennoù enrollet.
+menu-home=Pajenn degemer Wikipedia
 menu-language=Lenn e...
 menu-savePage=Enrollañ ar bajenn
 menu-savedPages=Pajennoù enrollet.
@@ -24,6 +29,9 @@ menu-selectText=Diuzañ an destenn
 menu-sharePage=Rannañ ar bajenn gant ub.
 menu-about=Diwar-benn
 menu-cancel=Nullañ
+menu-output=Ezvont
+menu-sources=Mammennoù
+settings-close=Serriñ skramm an arventennoù
 settings-title=Arventennoù
 settings-app-version-label=Stumm an arload :
 settings-android-version-label=Stumm Android :
@@ -35,21 +43,29 @@ settings-font-size-desc=Termeniñ ment fontoù ar pennadoù
 settings-font-size-smaller=Bihan
 settings-font-size-normal=Reizh
 settings-font-size-larger=Bras
+langlinks-close=Serriñ ar skramm lenn e yezhoù all
 langlinks-title=Lenn ar pennad e...
 error-not-available=Ho tigarez, n'haller ket mont d'ar bajenn.
 error-offline=N'emaoc'h ket enlinenn ha n'eo ket bet enrollet ar bajenn c'hoazh.
+error-offline-prompt=Klaskit en-dro pa viot kevreet ouzh ur rouedad.
 error-saved-or-online=Digeriñ ur bajenn enrollet a c'hallit pe mont enlinenn da glask un dra bennak.
 error-not-found=Digarezit ac'hanomp, n'eus pennad ebet gant an anv-se.
 error-not-found-reason=Marteze a-walc'h eo bet skrivet a-dreuz an titl ganeoc'h ? Pe neuze n'eo ket bet krouet ar bajenn evit c'hoazh.
 error-search-again=Klaskit un dermen all mar plij.
 about-page-label=Diwar hor penn
+history-clear-all=Diverkañ an Istor
+history-close=Serriñ skramm an istor
 history-title=Istor
+about-close=Serriñ ar skramm Diwar-benn
 about-page-title=Diwar-benn
 about-version=Stumm
 about-copyright=Pep gwir miret strizh (C) evit an arload-mañ gant Diazezadur Wikimedia hag an diorroerien o deus kemeret perzh.
 about-license=Ur meziant frank dindan an aotre implijout hollek foran GNU eo hemañ. Gallout a rit skignañ anezhañ ha degas kemmoù ennañ diouzh diferadoù zo. Gwelet http://www.gnu.org/licenses/old-licenses/gpl-2.0.html evit gouzout hiroc'h. Ar c'hod tarzh a c'haller da gaout e https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Serriñ skramm ar pajennoù e-kichen
 nearby-title=Pajennoù tost
+app-description=Arolad ofisiel Wikipedia evit Android. An holloueziadur frank a wirioù ha digoust eo Wikipedia. Kinnig a ra ouzhpenn 20 milion a bennadoù e 280 yezh. Ar vammenn anaoudegezhioù glokañ eo hag an hini a vez sellet outi ar muiañ biskoazh ez eo ivez.\n\nPerzhioù : Enrollañ evit lenn diwezhatoc'h pe en ur mod ezlinenn. Klask er pennadoù kar, kenrannañ pennadoù dre arc'hwel "Kenrannañ" Android. Lenn ur pennad e meur a yezh. Klask er mod skramm leun.\n\nKasit deomp hoc'h evezhiadennoù dreTwitter war @WikimediaMobile.
 search-results-did-you-mean-label=N'hoc'h eus ket soñjet kentoc'h e :
 search-results-no-results=N'eus bet kavet disoc'h ebet
-# Fuzzy
-search-results-close=Serriñ
+search-results-close=Serriñ disoc'hoù ar c'hlask
+search-button=Klask an destenn-mañ e wikipedia
+search-placeholder=Klask
