--- a/assets/www/messages/messages-ca.properties
+++ b/assets/www/messages/messages-ca.properties
@@ -6,12 +6,17 @@
 sitename=Viquipèdia
 spinner-loading=S'està carregant...
 spinner-retrieving=S'està recuperant el contingut de $1...
+saved-pages-clear-all=Neteja totes les pàgines desades
+saved-pages-close=Tanca la finestra de pàgines desades
 saved-pages-max-warning=Heu assolit el nombre màxim de pàgines desades.
 page-saved=S'ha desat $1.
 page-already-saved=Ja s'ha desat $1.
 saved-page-remove-prompt=Voleu suprimir $1 de les pàgines desades?
+clear-all-history-prompt=Es neteja l'historial?
+clear-all-saved-pages-prompt=Es netegen totes les pàgines desades?
 saved-page-removed=S'ha suprimit $1.
 saved-pages-title=Pàgines desades
+menu-home=Pàgina d'inici de la Viquipèdia
 menu-language=Canvia la llengua
 menu-savePage=Desa la pàgina
 menu-savedPages=Pàgines desades
@@ -24,6 +29,9 @@ menu-selectText=Seleccioneu el text
 menu-sharePage=Comparteix la pàgina
 menu-about=Quant a
 menu-cancel=Cancel·la
+menu-output=Sortida
+menu-sources=Fonts
+settings-close=Tanca la finestra de paràmetres
 settings-title=Paràmetres
 settings-app-version-label=Versió de l'aplicació:
 settings-android-version-label=Versió de l'Android:
@@ -35,23 +43,29 @@ settings-font-size-desc=Defineix la mida de lletra de l'article
 settings-font-size-smaller=Petita
 settings-font-size-normal=Normal
 settings-font-size-larger=Gran
+langlinks-close=Tanca la finestra de lectura en altres llengües
 langlinks-title=Llegeix l'article en...
 error-not-available=Ho sentim, la pàgina no és disponible.
 error-offline=Sou fora de línia i la pàgina no s'havia desat abans.
+error-offline-prompt=Torneu-ho a provar quan estigueu connectat a la xarxa.
 error-saved-or-online=Podeu obrir una pàgina desada o posar-vos en línia i cercar.
 error-not-found=Ho sentim, no hi ha cap article amb aquest nom.
 error-not-found-reason=Potser n'heu escrit malament el títol, o bé l'article encara no s'ha creat.
 error-search-again=Cerqueu un altre terme.
 about-page-label=Qui som
+history-clear-all=Neteja l'historial
+history-close=Tanca la finestra d'historial
 history-title=Historial
+about-close=Tanca la finestra de 'Quant a'
 about-page-title=Quant a
 about-version=Versió
 about-copyright=L'aplicació té copyright (C) Wikimedia Foundation i desenvolupadors col·laboradors
 about-license=L'aplicació és programari lliure sota la GNU General Public License. Podeu distribuir-la i modificar-la lliurement sota certes condicions. Consulteu http://www.gnu.org/licenses/old-licenses/gpl-2.0.html per a més dertalls. El codi font és disponible a https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Tanca la finestra de pàgines properes
 nearby-title=Pàgines properes
-# Fuzzy
-app-description=Aplicació oficial de la Viquipèdia per a l'Android. La Viquipèdia és l'enciclopedia lliure que conté més de 20 milions d'articles en 280 llengües. Es tracta de l'obra més exhaustiva i ampliament usada que ha compilat mai la humanitat.\n\nCaracterístiques: deseu un article per llegir-lo després fora de línia, cerqueu-ne articles propes, compartiu articles amb la funcionalitat de compartició de l'Android, llegiu l'article en una llengua diferent, cerca en pantalla completa, etc.
+app-description=L'Aplicació oficial de la Viquipèdia per a l'Android. La Viquipèdia és l'enciclopèdia lliure que conté més de 20 milions d'articles en 280 llengües. Es tracta de l'obra més exhaustiva i àmpliament usada que ha compilat mai la humanitat.\n\nCaracterístiques: deseu un article per llegir-lo després fora de línia, cerqueu-ne articles propers, compartiu articles amb la funcionalitat de compartició de l'Android, llegiu l'article en una llengua diferent, cerca en pantalla completa, etc.\n\nFeu-nos arribar la vostra opinió des del Twitter a @WikimediaMobile.
 search-results-did-you-mean-label=Volíeu dir:
 search-results-no-results=Cap resultat
-# Fuzzy
-search-results-close=Tanca
+search-results-close=Tanca els resultats de cerca
+search-button=Cerca a la Viquipèdia aquest text
+search-placeholder=Cerca
