--- a/assets/www/messages/messages-da.properties
+++ b/assets/www/messages/messages-da.properties
@@ -5,12 +5,17 @@
 sitename=Wikipedia
 spinner-loading=Indlæser...
 spinner-retrieving=Henter indhold fra  $1 …
+saved-pages-clear-all=Ryd alle gemte sider
+saved-pages-close=Luk gemte siderskærmen
 saved-pages-max-warning=Du har nået det maksimale antal gemte sider.
 page-saved=$1 gemt.
 page-already-saved=$1 allerede gemt.
 saved-page-remove-prompt=Vil du fjerne  $1  fra gemte sider?
+clear-all-history-prompt=Ryd historikken?
+clear-all-saved-pages-prompt=Ryd alle gemte sider?
 saved-page-removed=$1 er blevet fjernet.
 saved-pages-title=Gemte sider
+menu-home=Wikipedias hjemmeside
 menu-language=Læs på…
 menu-savePage=Gem side
 menu-savedPages=Gemte sider
@@ -23,6 +28,9 @@ menu-selectText=Markér tekst
 menu-sharePage=Del siden
 menu-about=Om
 menu-cancel=Annuller
+menu-output=Output
+menu-sources=Kilder
+settings-close=Luk indstillingerskærmen
 settings-title=Indstillinger
 settings-app-version-label=Programversion:
 settings-android-version-label=Android-version:
@@ -34,23 +42,29 @@ settings-font-size-desc=Vælg sidens skriftstørrelse
 settings-font-size-smaller=Lille
 settings-font-size-normal=Normal
 settings-font-size-larger=Stor
-langlinks-title=Læs side på…
+langlinks-close=Luk skærmen med læs andre sprog
+langlinks-title=Læs siden på…
 error-not-available=Beklager, denne side ikke er tilgængelig.
 error-offline=Du er offline, og siden er ikke blevet gemt tidligere.
+error-offline-prompt=Prøv igen, når du er tilsluttet et netværk.
 error-saved-or-online=Du kan åbne en gemt side eller gå online og søge.
 error-not-found=Beklager, der findes ingen side med det navn.
 error-not-found-reason=Du kan have skrevet titlen forkert, eller siden er ikke blevet oprettet.
 error-search-again=Søg efter en anden term.
 about-page-label=Om os
+history-clear-all=Ryd historik
+history-close=Luk historikskærmen
 history-title=Historik
+about-close=Luk om-skærmen
 about-page-title=Om
 about-version=Version
 about-copyright=© Ophavsretten til dette programmet tilhører Wikimedia Foundation og udviklerne som har bidraget
 about-license=Dette program er fri software under GNU General Public License. Du er velkommen til at distribuere og redigere det under visse betingelser. Se http://www.gnu.org/licenses/old-licenses/gpl-2.0.html for detaljer. Kildekoden er tilgængelig på https://github.com/Wikimedia/WikipediaMobile
-nearby-title=Nærliggende sider
-# Fuzzy
-app-description=Officielle Wikipedia App til Android. Wikipedia er den frie encyklopædi, der indeholder mere end 20 millioner artikler på 280 sprog, og er det mest omfattende og udbredte opslagsværk, mennesker nogensinde har lavet.\n\nFunktioner: Gem artikler for at læse senere eller offline, søg efter artikler om ting i nærheden, del artikler med Androids "Del"-funktion, læs artikler på andre sprog, fuldskærmssøgning
+nearby-close=Luk skærmen med artikler i nærheden
+nearby-title=Sider i nærheden
+app-description=Officielle Wikipedia App til Android. Wikipedia er den frie encyklopædi, der indeholder mere end 20 millioner artikler på 280 sprog, og er det mest omfattende og udbredte opslagsværk, mennesker nogensinde har lavet.\n\nFunktioner: Gem artikler til at læse senere eller offline, søg efter artikler om ting i nærheden, del artikler med Androids "Del"-funktion, læs artikler på andre sprog, fuldskærmssøgning\n\nSend os din feedback på Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Mente du:
 search-results-no-results=Ingen resultater fundet
-# Fuzzy
-search-results-close=Luk
+search-results-close=Luk søgeresultater
+search-button=Søg Wikipedia efter denne tekst
+search-placeholder=Søg
