--- a/assets/www/messages/messages-de.properties
+++ b/assets/www/messages/messages-de.properties
@@ -8,12 +8,17 @@
 sitename=Wikipedia
 spinner-loading=Am Laden …
 spinner-retrieving=Am Abrufen von Inhalten aus $1 …
+saved-pages-clear-all=Alle gespeicherten Seiten löschen
+saved-pages-close=Bildschirm mit den gespeicherten Seiten schließen
 saved-pages-max-warning=Du hast die maximale Anzahl an speicherbaren Seiten erreicht.
 page-saved=$1 wurde gespeichert.
 page-already-saved=$1 wurde bereits gespeichert.
 saved-page-remove-prompt=$1 aus den gespeicherten Seiten entfernen?
+clear-all-history-prompt=Verlauf löschen?
+clear-all-saved-pages-prompt=Alle gespeicherten Seiten löschen?
 saved-page-removed=$1 wurde entfernt.
 saved-pages-title=Gespeicherte Seiten
+menu-home=Startseite der Wikipedia
 menu-language=Sprache ändern
 menu-savePage=Seite speichern
 menu-savedPages=Gespeicherte Seiten
@@ -26,6 +31,9 @@ menu-selectText=Text auswählen
 menu-sharePage=Seite mit anderen teilen
 menu-about=Über
 menu-cancel=Abbrechen
+menu-output=Ausgabe
+menu-sources=Quellen
+settings-close=Bildschirm mit den Einstellungen schließen
 settings-title=Einstellungen
 settings-app-version-label=Applikationsversion:
 settings-android-version-label=Android-Version:
@@ -37,23 +45,29 @@ settings-font-size-desc=Die Schriftgröße des Artikels festlegen
 settings-font-size-smaller=Klein
 settings-font-size-normal=normal
 settings-font-size-larger=Groß
+langlinks-close=Bildschirm mit Links zu anderen Sprachen schließen
 langlinks-title=Artikel lesen auf …
 error-not-available=Diese Seite ist leider nicht vorhanden.
 error-offline=Du bist offline und die Seite wurde vorher nicht gespeichert.
+error-offline-prompt=Versuche es erneut, sobald du mit einem Netzwerk verbunden bist.
 error-saved-or-online=Du kannst eine gespeicherte Seite öffnen oder online gehen und nach einer Seite suchen.
 error-not-found=Es gibt leider keinen Artikel dieses Namens.
 error-not-found-reason=Möglicherweise hast du den Namen falsch geschrieben, oder es gibt diesen Artikel noch nicht.
 error-search-again=Bitte suche nach einem anderen Begriff.
 about-page-label=Über uns
+history-clear-all=Verlauf löschen
+history-close=Bildschirm mit dem Verlauf schließen
 history-title=Versionsgeschichte
+about-close=Bildschirm mit den Informationen zur App schließen
 about-page-title=Über
 about-version=Version
 about-copyright=(C) Diese Anwendung ist urheberrechtlich für die Wikimedia Foundation und die beteiligten Softwareentwickler geschützt
 about-license=Diese Anwendung ist Freie Software gemäß der GNU General Public License. Unter bestimmten Voraussetzungen ist es gestattet, sie weiterzugeben und zu verändern. Siehe http://www.gnu.org/licenses/old-licenses/gpl-2.0.de.html bezüglich der Einzelheiten. Der Quellcode ist unter https://github.com/Wikimedia/WikipediaMobile verfügbar.
+nearby-close=Bildschirm mit ähnlichen Seiten schließen
 nearby-title=Ähnliche Seiten
-# Fuzzy
-app-description=Offizielle Wikipedia-App für Android. Wikipedia ist, mit mehr als 20 Millionen Artikeln in mehr als 280 Sprachen, die umfangreichste und meistgenutzte Wissenssammlung, die jemals von Menschen zusammengestellt wurde.\n\nMerkmale: Speichere Artikel, um sie zu einem späteren Zeitpunkt offline lesen zu können, suche nach ähnlichen Artikeln, mache mit der Funktion „Teilen“ auf Artikel aufmerksam, lese Artikel in einer anderen Sprache, Vollbildsuche
+app-description=Offizielle Wikipedia-App für Android. Wikipedia ist, mit mehr als 20 Millionen Artikeln in mehr als 280 Sprachen, die umfangreichste und meistgenutzte Wissenssammlung, die jemals von Menschen zusammengestellt wurde.\n\nMerkmale: Speichere Artikel, um sie zu einem späteren Zeitpunkt offline lesen zu können, suche nach ähnlichen Artikeln, mache mit der Funktion „Teilen“ auf Artikel aufmerksam, lese Artikel in einer anderen Sprache, Vollbildsuche\n\nSende uns auf Twitter eine Rückmeldung unter @WikimediaMobile.
 search-results-did-you-mean-label=Meintest du:
 search-results-no-results=Es wurde keine Ergebnisse gefunden.
-# Fuzzy
-search-results-close=Schließen
+search-results-close=Bildschirm mit den Suchergebnissen schließen
+search-button=In der Wikipedia nach diesem Text suchen
+search-placeholder=Suche
