--- a/assets/www/messages/messages-es.properties
+++ b/assets/www/messages/messages-es.properties
@@ -1,5 +1,6 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
+# Author: Bernardom
 # Author: Fitoschido
 # Author: Platonides
 # Author: Vivaelcelta
@@ -13,6 +14,7 @@ page-already-saved=$1 ya está almacenado
 saved-page-remove-prompt=¿Sacar $1 de las páginas almacenadas?
 saved-page-removed=$1 ha sido retirada
 saved-pages-title=Páginas almacenadas
+menu-home=Página principal de Wikipedia
 menu-language=Leer en…
 menu-savePage=Almacenar página
 menu-savedPages=Páginas almacenadas
@@ -23,6 +25,7 @@ menu-settings=Ajustes
 menu-selectText=Seleccionar texto
 menu-sharePage=Compartir la página
 menu-about=Acerca de
+menu-cancel=Cancelar
 settings-title=Ajustes
 settings-app-version-label=Versión de la aplicación:
 settings-android-version-label=Versión de Android:
@@ -42,5 +45,6 @@ error-not-found=No existe ningún artículo con ese título.
 error-not-found-reason=El artículo no existe o el título está mal escrito
 error-search-again=Por favor, busque otro término.
 history-title=Historial
+about-version=Versión
 # Fuzzy
 app-description=Aplicación oficial de Wikipedia para Android. Wikipedia es la enciclopedia libre con más de 20 millones de artículos en 280 idiomas y es la obra de referencia más exhaustiva y ampliamente usada jamás recopilada por la humanidad.\n\nCaracterísticas: Guardar artículos para leerlos más tarde o sin conexión, Buscar artículos cercanos, Compartir artículos usando la función "Compartir" de Android, Leer artículo en otro idioma, Búsqueda a pantalla completa.
