--- a/assets/www/messages/messages-fi.properties
+++ b/assets/www/messages/messages-fi.properties
@@ -12,6 +12,7 @@ saved-pages-max-warning=Tallennettujen sivujen enimmäismäärä on saavutettu.
 page-saved=$1 on tallennettu.
 page-already-saved=$1 on jo tallennettu.
 saved-page-remove-prompt=Poistetaanko $1 tallennetuista sivuista?
+clear-all-history-prompt=Tyhjennä historia?
 saved-page-removed=$1 on poistettu.
 saved-pages-title=Tallennetut sivut
 menu-language=Muuta kieli
@@ -40,13 +41,18 @@ settings-font-size-larger=Suuri
 langlinks-title=Lue sivu kielellä...
 error-not-available=Valitettavasti tämä sivu ei ole käytettävissä.
 error-offline=Olet offline-tilassa eikä sivua ole tallennettu aikaisemmin.
+error-offline-prompt=Yritä uudelleen, kun olet yhteydessä verkkoon.
 error-saved-or-online=Voit avata tallennetun sivun tai etsiä online-tilassa.
 error-not-found=Tämän nimistä sivua ei ole.
 error-not-found-reason=Olet kirjoittanut otsikon väärin tai sivua ei ole vielä luotu.
 error-search-again=Käytä jotain muuta hakutermiä.
+history-clear-all=Tyhjennä historia
 history-title=Historia
+about-page-title=Tietoja
 about-version=Versio
 about-copyright=Tämä sovellus on suojattu tekijänoikeuksilla Wikimedia Foundationille ja osallistuville kehittäjille
 about-license=Tämä sovellus on julkaistu GNU General Public -lisenssin alaisena. Voit levittää edelleen sitä ja muokata tiettyjen ehtojen alaisena. Lue http://www.gnu.org/licenses/old-licenses/gpl-2.0.html saadaksesi tietoja. Lähdekoodi on saatavilla osoitteesta https://github.com/Wikimedia/WikipediaMobile
 # Fuzzy
 app-description=Virallinen Wikipedia-sovellus Androidille. Wikipedia on vapaa tietosanakirja, joka sisältää yli 20 miljoonaa artikkelia 280 eri kielellä. Wikipedia on kattavin ja käytetyin ikinä luotu lähdeteos.\n\nOminaisuudet: Artikkelien tallennus myöhempää lukua varten ilman verkkoyhteyttä, maantieteellisesti lähellä olevien artikkeleiden haku, artikkeleiden jakaminen Androidin jakotoiminnolla, artikkelien lukeminen toisella kielellä ja kokonäytön haku.
+search-results-no-results=Tuloksia ei löytynyt
+search-results-close=Sulje hakutulokset
