--- a/assets/www/messages/messages-fr.properties
+++ b/assets/www/messages/messages-fr.properties
@@ -10,12 +10,17 @@
 sitename=Wikipédia
 spinner-loading=Chargement…
 spinner-retrieving=Chargement de  $1…
+saved-pages-clear-all=Effacer toutes les pages enregistrées
+saved-pages-close=Fermer tous les écrans de pages enregistrées
 saved-pages-max-warning=Vous avez atteint le nombre maximal de pages sauvegardées.
 page-saved=$1 sauvegardé.
 page-already-saved=$1 déjà sauvegardé.
 saved-page-remove-prompt=Supprimer  $1 des pages sauvegardées ?
+clear-all-history-prompt=Effacer l'historique?
+clear-all-saved-pages-prompt=Effacer toutes les pages enregistrées?
 saved-page-removed=$1 a été supprimé.
 saved-pages-title=Pages sauvegardées.
+menu-home=Page d'accueil de Wikipedia
 menu-language=Lire en…
 menu-savePage=Sauvegarder la page
 menu-savedPages=Pages sauvegardées.
@@ -28,6 +33,9 @@ menu-selectText=Sélectionnez le texte
 menu-sharePage=Partager la page
 menu-about=À propos
 menu-cancel=Annuler
+menu-output=Sortie
+menu-sources=Sources
+settings-close=Fermer l'écran des paramètres
 settings-title=Paramètres
 settings-app-version-label=Version de l'application :
 settings-android-version-label=Version d'Android :
@@ -39,23 +47,29 @@ settings-font-size-desc=Définissez la taille de police des pages
 settings-font-size-smaller=Petit
 settings-font-size-normal=Normal
 settings-font-size-larger=Grand
+langlinks-close=Fermer l'écran de lecture en d'autres langues
 langlinks-title=Lire la page en…
 error-not-available=Désolé, cette page n’est pas disponible.
 error-offline=Vous êtes hors connexion et la page n'a pas été enregistrée précédemment.
+error-offline-prompt=Veuillez essayer à nouveau quand vous serez connecté à un réseau.
 error-saved-or-online=Vous pouvez ouvrir une page enregistrée ou aller en ligne et effectuer une recherche.
 error-not-found=Désolé, aucune page de ce nom n'existe.
 error-not-found-reason=Vous avez peut-être mal épelé le titre, ou l'article n'a pas été créé.
 error-search-again=Veuillez rechercher un autre terme.
 about-page-label=Qui sommes-nous
+history-clear-all=Effacer l'historique
+history-close=Fermer l'écran d'historique
 history-title=Historique
+about-close=Fermer l'écran À propos
 about-page-title=À propos
 about-version=Version
 about-copyright=Cette application est sous copyright (C) Wikimedia Foundation et développeurs participants
 about-license=Cette application est un logiciel libre sous licence publique générale GNU. Nous vous invitons à le distribuer et le modifier sous certaines conditions. Voir http://www.gnu.org/licenses/old-licenses/gpl-2.0.html pour plus de détails. Le code source est disponible à https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Fermer l'écran des pages voisines
 nearby-title=Pages à proximité
-# Fuzzy
-app-description=Application Wikipédia officielle pour Android. Wikipédia est l’encyclopédie libre et gratuite, offrant plus de 20 millions d’articles en 280 langues. C’est la source de connaissance la plus complète et la plus plus largement utilisée jamais constituée.\n\nFonctionnalités : Sauvegarde pour une lecture ultérieure, ou en mode hors-ligne. Recherche des articles à proximité. Partage grâce à la fonction « Partage » d’Android. Lecture d’un article en plusieurs langues. Recherche plein écran.
+app-description=Application Wikipédia officielle pour Android. Wikipédia est l’encyclopédie libre et gratuite, offrant plus de 20 millions d’articles en 280 langues. C’est la source de connaissance la plus complète et la plus plus largement utilisée jamais constituée.\n\nFonctionnalités : Sauvegarde pour une lecture ultérieure, ou en mode hors-ligne. Recherche des articles à proximité. Partage grâce à la fonction « Partage » d’Android. Lecture d’un article en plusieurs langues. Recherche plein écran.\n\nEnvoyez-nous vos commentaires sur Twitter à @WikimediaMobile.
 search-results-did-you-mean-label=Vouliez-vous dire :
 search-results-no-results=Aucun résultat trouvé
-# Fuzzy
-search-results-close=Fermer
+search-results-close=Fermer les résultats de recherche
+search-button=Rechercher ce texte dans Wikipédia
+search-placeholder=Rechercher
