--- a/assets/www/messages/messages-gd.properties
+++ b/assets/www/messages/messages-gd.properties
@@ -5,6 +5,8 @@
 sitename=An Uicipeid
 spinner-loading='Ga luchdadh...
 spinner-retrieving=A' faighinn susbaint o $1…
+saved-pages-clear-all=Falamhaich gach duilleag a chaidh a shàbhaladh
+saved-pages-close=Dùin sgrìn nan duilleagan a chaidh a shàbhaladh
 saved-pages-max-warning=Shàbhail thu na tha ceadaichte dhut de dhuilleagan.
 page-saved=Chaidh $1 a shàbhaladh.
 page-already-saved=Chaidh $1 a shàbhaladh mu thràth.
