--- a/assets/www/messages/messages-gl.properties
+++ b/assets/www/messages/messages-gl.properties
@@ -5,12 +5,17 @@
 sitename=Wikipedia
 spinner-loading=Cargando...
 spinner-retrieving=Recuperando os contidos desde $1...
+saved-pages-clear-all=Limpar todas as páxinas gardadas
+saved-pages-close=Pechar a pantalla coas páxinas gardadas
 saved-pages-max-warning=Acadou o número máximo de páxinas gardadas.
 page-saved=Gardouse "$1".
 page-already-saved="$1" xa se gardou.
 saved-page-remove-prompt=Quere eliminar "$1" das páxinas gardadas?
+clear-all-history-prompt=Quere limpar o historial?
+clear-all-saved-pages-prompt=Quere limpar todas as páxinas gardadas?
 saved-page-removed=Eliminouse "$1".
 saved-pages-title=Páxinas gardadas
+menu-home=Páxina de inicio da Wikipedia
 menu-language=Cambiar a lingua
 menu-savePage=Gardar a páxina
 menu-savedPages=Páxinas gardadas
@@ -23,6 +28,9 @@ menu-selectText=Seleccionar o texto
 menu-sharePage=Compartir a páxina
 menu-about=Acerca de
 menu-cancel=Cancelar
+menu-output=Saída
+menu-sources=Fontes
+settings-close=Pechar a pantalla de configuración
 settings-title=Configuracións
 settings-app-version-label=Versión da aplicación:
 settings-android-version-label=Versión do Android:
@@ -34,23 +42,29 @@ settings-font-size-desc=Defina o tamaño da letra dos artigos
 settings-font-size-smaller=Pequena
 settings-font-size-normal=Normal
 settings-font-size-larger=Grande
+langlinks-close=Pechar a pantalla de lectura noutras linguas
 langlinks-title=Ler o artigo en...
 error-not-available=Sentímolo, esa páxina non está dispoñible.
 error-offline=Está desconectado e non gardou a páxina con anterioridade.
+error-offline-prompt=Inténteo de novo cando estea conectado a unha rede.
 error-saved-or-online=Pode abrir unha páxina gardada ou conectarse e facer unha procura.
 error-not-found=Sentímolo, non existe artigo ningún con ese nome.
 error-not-found-reason=Poida que escribise mal o título ou que o artigo aínda non exista.
 error-search-again=Busque outro termo.
 about-page-label=Acerca de nós
+history-clear-all=Limpar o historial
+history-close=Pechar a pantalla do historial
 history-title=Historial
+about-close=Pechar a pantalla "Acerca de"
 about-page-title=Acerca de
 about-version=Versión
 about-copyright=Esta aplicación atópase baixo os dereitos de autor (C) da Fundación Wikimedia e os desenvolvedores participantes
 about-license=Esta aplicación é software libre baixo a licenza pública xeral de GNU. Pode distribuílo e modificalo baixo certas condicións. Bótelle unha ollada a http://www.gnu.org/licenses/old-licenses/gpl-2.0.html para obter máis detalles. O código fonte está dispoñible en https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Pechar a pantalla coas páxinas sobre lugares próximos
 nearby-title=Páxinas sobre lugares próximos
-# Fuzzy
-app-description=Aplicación oficial da Wikipedia para Android. A Wikipedia é unha enciclopedia libre con máis de 20 millóns de artigos en 280 linguas, sendo tamén a obra de referencia máis completa e amplamente empregada en toda a historia.\n\nCaracterísticas: gardar un artigo para lelo máis tarde ou sen conexión, procurar artigos sobre lugares próximos, compartir artigos mediante a función "Compartir" de Android, ler un artigo noutra lingua, procura en pantalla completa
+app-description=Aplicación oficial da Wikipedia para Android. A Wikipedia é unha enciclopedia libre con máis de 20 millóns de artigos en 280 linguas, sendo tamén a obra de referencia máis completa e amplamente empregada en toda a historia.\n\nCaracterísticas: gardar un artigo para lelo máis tarde ou sen conexión, procurar artigos sobre lugares próximos, compartir artigos mediante a función "Compartir" de Android, ler un artigo noutra lingua, procura en pantalla completa\n\nEnvíanos suxestións a través do Twitter á conta @WikimediaMobile.
 search-results-did-you-mean-label=Quizais quixo dicir:
 search-results-no-results=Non se atopou ningún resultado
-# Fuzzy
-search-results-close=Pechar
+search-results-close=Pechar os resultados da procura
+search-button=Procurar este texto na Wikipedia
+search-placeholder=Procurar
