--- a/assets/www/messages/messages-hu.properties
+++ b/assets/www/messages/messages-hu.properties
@@ -7,12 +7,17 @@
 sitename=Wikipédia
 spinner-loading=Betöltés…
 spinner-retrieving=Tartalom betöltése $1 helyről...
+saved-pages-clear-all=Összes mentett lap törlése
+saved-pages-close=Mentett lapok oldal bezárása
 saved-pages-max-warning=Elérted az elmentett lapok maximális számát.
 page-saved=$1 elmentve.
 page-already-saved=$1 már elmentett.
 saved-page-remove-prompt=Eltávolítod a(z) $1 oldalt a mentettek közöl?
+clear-all-history-prompt=Előzmények törlése?
+clear-all-saved-pages-prompt=Törlöd a összes mentett lapot?
 saved-page-removed=$1 törölve.
 saved-pages-title=Elmentett lapok
+menu-home=Wikipédia honlap
 menu-language=Nyelvváltás
 menu-savePage=Lap mentése
 menu-savedPages=Elmentett lapok
@@ -25,6 +30,9 @@ menu-selectText=Szöveg kijelölése
 menu-sharePage=Lap megosztása
 menu-about=Névjegy
 menu-cancel=Mégse
+menu-output=Kimenet
+menu-sources=Források
+settings-close=Beállítások oldal bezárása
 settings-title=Beállítások
 settings-app-version-label=Alkalmazás verziója:
 settings-android-version-label=Android verzió:
@@ -36,23 +44,29 @@ settings-font-size-desc=Cikk betűméretének beállítása
 settings-font-size-smaller=Kicsi
 settings-font-size-normal=Aktuális
 settings-font-size-larger=Nagy
+langlinks-close=Más nyelven olvasás képernyő bezárása
 langlinks-title=Lap olvasása...
 error-not-available=Sajnos ez a lap nem érhető el.
 error-offline=Nincs kapcsolat, és a lap nem lett korábban elmentve.
+error-offline-prompt=Próbáld újra, amikor csatlakozva vagy a hálózathoz.
 error-saved-or-online=Nyiss meg egy mentett lapot vagy menj online, és keress!
 error-not-found=Sajnos nincs ilyen nevű cikk.
 error-not-found-reason=Lehet, hogy elírtad a címet, vagy a lap még nincs létrehozva.
 error-search-again=Kérjük, keress másik kifejezésre!
 about-page-label=Névjegy
+history-clear-all=Előzmények törlése
+history-close=Előzmények képernyő bezárása
 history-title=Előzmények
+about-close=Névjegy képernyő bezárása
 about-page-title=Névjegy
 about-version=Verzió
 about-copyright=Ez az alkalmazás copyright (C) Wikimedia Alapítvány és a közreműködő fejlesztők
 about-license=Ez az alkalmazás szabad szoftver a GNU Általános Nyilvános Licenc alatt. Szabadon terjesztheted és módosíthatod ezt, bizonyos feltételek mellett. Részletekért lásd a http://www.gnu.org/licenses/old-licenses/gpl-2.0.html oldalt. A forrás kód itt érhető el: https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Közeli lapok képernyő bezárása
 nearby-title=Közeli lapok
-# Fuzzy
-app-description=Hivatalos Wikipédia Alkalmazás Androidra. Wikipédia egy ingyenes enciklopédia, amely több mint 2 millió cikket tartalmaz 280 nyelven, a legátfogóbb és legszéleskörűbben használt referencia, amit valaha összegyűjtöttek.\n\nSzolgáltatások: cikkek elmentése későbbi offline olvasásra, közeli cikkek keresése, cikkek megosztása az Android share funkciójával, cikkek olvasása különböző nyelveken, teljes képernyős keresés
+app-description=Hivatalos Wikipédia Alkalmazás Androidra. Wikipédia egy ingyenes enciklopédia, amely több mint 2 millió cikket tartalmaz 280 nyelven, a legátfogóbb és legszéleskörűbben használt referencia, amit valaha összegyűjtöttek.\n\nSzolgáltatások: cikkek elmentése későbbi offline olvasásra, közeli cikkek keresése, cikkek megosztása az Android share funkciójával, cikkek olvasása különböző nyelveken, teljes képernyős keresés\n\nÉszrevételeidet a @WikimediaMobile Twitter oldalra küldheted.
 search-results-did-you-mean-label=Így értetted:
 search-results-no-results=Nincs találat
-# Fuzzy
-search-results-close=Bezár
+search-results-close=Keresési eredmények bezárása
+search-button=Adott szöveg keresése a Wikipédián
+search-placeholder=Keresés
