--- a/assets/www/messages/messages-ia.properties
+++ b/assets/www/messages/messages-ia.properties
@@ -5,12 +5,17 @@
 sitename=Wikipedia
 spinner-loading=Cargamento...
 spinner-retrieving=Carga contento ab $1...
+saved-pages-clear-all=Rader tote le paginas salveguardate
+saved-pages-close=Clauder le schermo de paginas salveguardate
 saved-pages-max-warning=Tu ha attingite le numero maxime de paginas salveguardate.
 page-saved=$1 salveguardate.
 page-already-saved=$1 jam salveguardate.
 saved-page-remove-prompt=Remover $1 del paginas salveguardate?
+clear-all-history-prompt=Rader historia?
+clear-all-saved-pages-prompt=Rader tote le paginas salveguardate?
 saved-page-removed=$1 ha essite removite.
 saved-pages-title=Paginas salveguardate
+menu-home=Pagina principal de Wikipedia
 menu-language=Cambiar de lingua
 menu-savePage=Salveguardar pagina
 menu-savedPages=Paginas salveguardate
@@ -23,6 +28,9 @@ menu-selectText=Selige texto
 menu-sharePage=Divider pagina
 menu-about=A proposito
 menu-cancel=Cancellar
+menu-output=Output
+menu-sources=Fontes
+settings-close=Clauder le schermo de configurationes
 settings-title=Configuration
 settings-app-version-label=Version del application:
 settings-android-version-label=Version de Android:
@@ -34,23 +42,29 @@ settings-font-size-desc=Seliger le dimension del typo de litteras del articulo
 settings-font-size-smaller=Micre
 settings-font-size-normal=Normal
 settings-font-size-larger=Grande
+langlinks-close=Clauder le schermo de lectura in altere linguas
 langlinks-title=Leger articulo in...
 error-not-available=Iste pagina non es disponibile.
 error-offline=Tu es foras de linea e le pagina non ha essite salveguardate antea.
+error-offline-prompt=Per favor reproba quando tu es connectite a un rete.
 error-saved-or-online=Tu pote aperir un pagina salveguardate o vader in linea e cercar.
 error-not-found=Nulle articulo con iste nomine existe.
 error-not-found-reason=Le titulo pote esser incorrecte, o le articulo non ha essite create.
 error-search-again=Per favor cerca un altere termino.
 about-page-label=Qui es nos
+history-clear-all=Rader historia
+history-close=Clauder le schermo de historia
 history-title=Historia
+about-close=Clauder le schermo "A proposito"
 about-page-title=A proposito
 about-version=Version
 about-copyright=Iste application es copyright (C) Fundation Wikimedia e disveloppatores contribuente
 about-license=Iste application es software libere sub le Licentia Public General de GNU. Tu pote distribuer e modificar lo sub certe conditiones. Vide http://www.gnu.org/licenses/old-licenses/gpl-2.0.html pro detalios. Le codice-fonte es disponibile a https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Clauder le schermo de paginas vicin
 nearby-title=Paginas a proximitate
-# Fuzzy
-app-description=Application official de Wikipedia pro Android. Wikipedia es le encyclopedia libere con plus de 20 milliones de articulos in 280 linguas, e es le obra de referentia le plus comprehensive e le plus generalmente usate que humanos ha jammais compilate.\n\nFunctionalitate: salveguardar articulo pro leger plus tarde o foras de linea; cercar articulos a proximitate; divider articulos con le function "Divider" de Android; leger articulo in un altere lingua; recerca in plen schermo.
+app-description=Application official de Wikipedia pro Android. Wikipedia es le encyclopedia libere con plus de 20 milliones de articulos in 280 linguas, e es le obra de referentia le plus comprehensive e le plus generalmente usate que humanos ha jammais compilate.\n\nFunctionalitate: salveguardar articulo pro leger plus tarde o foras de linea; cercar articulos a proximitate; divider articulos con le function "Divider" de Android; leger articulo in un altere lingua; recerca in plen schermo.\n\nInvia nos tu commentario sur Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Vole tu dicer:
 search-results-no-results=Nulle resultato trovate
-# Fuzzy
-search-results-close=Clauder
+search-results-close=Clauder resultatos de recerca
+search-button=Cercar iste texto in Wikipedia
+search-placeholder=Cercar
