--- a/assets/www/messages/messages-id.properties
+++ b/assets/www/messages/messages-id.properties
@@ -13,6 +13,7 @@ page-already-saved=$1 sudah disimpan.
 saved-page-remove-prompt=Hapus $1 dari halaman yang disimpan?
 saved-page-removed=$1 telah dihapus.
 saved-pages-title=Halaman-halaman yang disimpan
+menu-home=Halaman utama Wikipedia
 menu-language=Baca dlm bahasa...
 menu-savePage=Simpan halaman
 menu-savedPages=Halaman-halaman yang disimpan
@@ -25,6 +26,8 @@ menu-selectText=Pilih teks
 menu-sharePage=Bagikan halaman
 menu-about=Tentang
 menu-cancel=Batalkan
+menu-output=Keluaran
+menu-sources=Sumber
 settings-title=Pengaturan
 settings-app-version-label=Versi aplikasi:
 settings-android-version-label=Versi Android:
@@ -39,6 +42,7 @@ settings-font-size-larger=Besar
 langlinks-title=Baca halaman dalam…
 error-not-available=Maaf, halaman ini tidak tersedia.
 error-offline=Anda sedang luring dan halaman ini tidak disimpan sebelumnya.
+error-offline-prompt=Silakan coba lagi ketika Anda terhubung ke jaringan.
 error-saved-or-online=Anda dapat membuka halaman yang telah tersimpan atau daring dan cari.
 error-not-found=Maaf, tidak ada halaman yang bernama itu.
 error-not-found-reason=Anda mungkin salah mengeja judul, atau halaman belum dibuat.
@@ -54,3 +58,5 @@ search-results-did-you-mean-label=Maksud Anda:
 search-results-no-results=Tidak ada hasil ditemukan
 # Fuzzy
 search-results-close=Tutup
+search-button=Cari teks ini di Wikipedia
+search-placeholder=Cari
