--- a/assets/www/messages/messages-it.properties
+++ b/assets/www/messages/messages-it.properties
@@ -51,5 +51,7 @@ history-title=Cronologia
 about-version=Versione
 about-copyright=Questa applicazione è copyright (C) Wikimedia Foundation e degli sviluppatori che vi hanno contribuito
 about-license=Questa applicazione è un software libero rilasciato con licenza GNU General Public License. Puoi redistribuirlo e modificarlo in base a determinate condizioni. Vedi http://www.gnu.org/licenses/old-licenses/gpl-2.0.html per i dettagli. Il codice sorgente è disponibile su https://github.com/Wikimedia/WikipediaMobile
-# Fuzzy
-app-description=Applicazione ufficiale di Wikipedia per Android. Wikipedia è l'enciclopedia libera con oltre 20 milioni di voci in 280 lingue ed è l'opera di consultazione più completa e più usata nella storia dell'umanità.\n\nCaratteristiche: salva la voce per una lettura successiva o non in linea, cerca voci relative a luoghi vicini, condividi voci attraverso la funzione "Condividi" di Android, leggi la voce in un'altra lingua, ricerca a tutto schermo.
+app-description=Applicazione ufficiale di Wikipedia per Android. Wikipedia è l'enciclopedia libera con oltre 20 milioni di voci in 280 lingue ed è l'opera di consultazione più completa e più usata nella storia dell'umanità.\n\nCaratteristiche: salva la voce per una lettura successiva o non in linea, cerca voci relative a luoghi vicini, condividi voci attraverso la funzione "Condividi" di Android, leggi la voce in un'altra lingua, ricerca a tutto schermo.\n\nScrivici in Twitter @WikimediaMobile.
+search-results-did-you-mean-label=Forse cercavi:
+search-results-no-results=Nessun risultato
+search-placeholder=Ricerca
