--- a/assets/www/messages/messages-ka.properties
+++ b/assets/www/messages/messages-ka.properties
@@ -7,12 +7,17 @@
 sitename=ვიკიპედია
 spinner-loading=იტვირთება...
 spinner-retrieving=მიღება... წყარო - "$1".
+saved-pages-clear-all=ყველა შენახული გვერდის გასუფთავება
+saved-pages-close=შენახული გვერდების ეკრანის გასუფთავება
 saved-pages-max-warning=მიღწეულია შენახული გვერდების მაქსიმალური რაოდენობა.
 page-saved=$1 შენახულია.
 page-already-saved=$1 უკვე შენახულია.
 saved-page-remove-prompt=მოვაშოროთ $1 შენახული გვერდებიდან?
+clear-all-history-prompt=წავშალო ისტორია?
+clear-all-saved-pages-prompt=გავასუფთავო ყველა შენახული გვერდი?
 saved-page-removed="$1" წაიშალა.
 saved-pages-title=შენახული გვერდები
+menu-home=ვიკიპედიის საშინაო გვერდი
 menu-language=ენის შეცვლა
 menu-savePage=გვერდის შენახვა
 menu-savedPages=შენახული გვერდები
@@ -25,6 +30,8 @@ menu-selectText=ტექსტის არჩევა
 menu-sharePage=გვერდის გაზიარება
 menu-about=შესახებ
 menu-cancel=გაუქმება
+menu-output=შედეგი
+menu-sources=წყარო
 settings-title=პარამეტრები
 settings-app-version-label=პროგრამის ვერსია
 settings-android-version-label=ანდროიდის ვერსია:
@@ -44,11 +51,13 @@ error-not-found=სტატია ასეთი სახელით არ 
 error-not-found-reason=შეიძლება თქვენ არასწორად გიწერიათ სახელწოდება, ან სტატია ჯერ კიდევ არ შექმნლა.
 error-search-again=მოძებნეთ სხვა ტერმინი, გეთაყვა.
 about-page-label=ჩვენ შესახებ
+history-clear-all=ისტორიის წაშლა
 history-title=ისტორია
 about-page-title=შესახებ
 about-version=ვერსია
 nearby-title=ახლო გვერდები
 search-results-did-you-mean-label=ხომ არ იგულისხმეთ:
 search-results-no-results=ჩანაწერი ვერ მოიძებნა
-# Fuzzy
-search-results-close=დახურვა
+search-results-close=ძიების შედეგების დახურვა
+search-button=ვიკიპედიაში ამ ტექსტის ძიება
+search-placeholder=ძიება
