--- a/assets/www/messages/messages-ko.properties
+++ b/assets/www/messages/messages-ko.properties
@@ -5,12 +5,17 @@
 sitename=위키백과
 spinner-loading=불러오는 중...
 spinner-retrieving=$1에서 내용을 불러오는 중...
+saved-pages-clear-all=모든 저장된 문서 지우기
+saved-pages-close=저장된 문서 화면 닫기
 saved-pages-max-warning=저장된 문서 수가 최대치에 도달했습니다.
 page-saved=$1 문서가 저장되었습니다.
 page-already-saved=$1 문서가 이미 저장되었습니다.
 saved-page-remove-prompt=저장된 문서에서 $1 문서를 제거할까요?
+clear-all-history-prompt=방문 기록을 삭제하시겠습니까?
+clear-all-saved-pages-prompt=모든 저장된 문서를 지울까요?
 saved-page-removed=$1 문서가 제거되었습니다.
 saved-pages-title=저장된 문서
+menu-home=위키백과 대문
 menu-language=언어 바꾸기
 menu-savePage=문서 저장하기
 menu-savedPages=저장된 문서
@@ -23,6 +28,9 @@ menu-selectText=텍스트 선택
 menu-sharePage=이 문서 공유하기
 menu-about=소개
 menu-cancel=취소
+menu-output=출력
+menu-sources=출처
+settings-close=설정 화면 닫기
 settings-title=설정
 settings-app-version-label=애플리케이션 버전:
 settings-android-version-label=안드로이드 버전:
@@ -34,23 +42,29 @@ settings-font-size-desc=문서 글자 크기 설정
 settings-font-size-smaller=작게
 settings-font-size-normal=중간
 settings-font-size-larger=크게
+langlinks-close=다른 언어로 읽기 화면 닫기
 langlinks-title=다음 언어로 문서 읽기...
 error-not-available=죄송합니다. 이 문서는 이용할 수 없습니다.
 error-offline=오프라인 상태이며, 이전에 문서가 저장되지 않았습니다.
+error-offline-prompt=네트워크에 연결되었을 때 다시 시도해 보십시오.
 error-saved-or-online=저장된 문서를 열거나 온라인에 접속하여 문서를 찾아볼 수 있습니다.
 error-not-found=죄송합니다. 이 이름으로 된 문서가 없습니다.
 error-not-found-reason=제목을 잘못 입력했거나 문서가 아직 생성되지 않았을 수 있습니다.
 error-search-again=잠시 후 다시 검색해 보십시오.
 about-page-label=소개
+history-clear-all=방문 기록 지우기
+history-close=방문 기록 화면 닫기
 history-title=역사
+about-close=소개 화면 닫기
 about-page-title=소개
 about-version=버전
 about-copyright=이 어플리케이션의 저작권은 (C) 위키미디어 재단과 개발자에 있습니다.
 about-license=이 어플리케이션은 GNU 일반 공중 사용 허가서에 따라 배포되는 자유 소프트웨어입니다. 일정한 조건 하에 재배포하고 수정할 수 있습니다. 라이선스 전문은 http://www.gnu.org/licenses/old-licenses/gpl-2.0.html에 있습니다. 소스 코드는 https://github.com/Wikimedia/WikipediaMobile에 있습니다.
+nearby-close=근처에 있는 문서 화면 닫기
 nearby-title=근처에 있는 것에 대한 문서
-# Fuzzy
-app-description=안드로이드용 공식 위키백과 애플리케이션입니다. 위키백과는 280개 이상의 언어로 2천만 개가 넘는 문서가 실려 있는 자유 백과사전이며, 인류가 편찬한 것들 중 가장 방대하고 널리 쓰이는 참고 자료입니다.\n\n기능: 나중에 읽거나 오프라인에서 읽을 수 있게 문서를 저장하기, 근처에 있는 것에 대한 문서 찾기, 안드로이드의 "공유하기" 기능을 이용해 문서 공유하기, 다른 언어로 문서 읽기, 전체 화면 읽기
+app-description=안드로이드용 공식 위키백과 애플리케이션입니다. 위키백과는 280개 이상의 언어로 2천만 개가 넘는 문서가 실려 있는 자유 백과사전이며, 인류가 편찬한 것들 중 가장 방대하고 널리 쓰이는 참고 자료입니다.\n\n기능: 나중에 읽거나 오프라인에서 읽을 수 있게 문서를 저장하기, 근처에 있는 것에 대한 문서 찾기, 안드로이드의 "공유하기" 기능을 이용해 문서 공유하기, 다른 언어로 문서 읽기, 전체 화면 읽기\n\n트위터 @WikimediaMobile으로 피드백을 보내주세요.
 search-results-did-you-mean-label=혹시 이걸 찾고 계셨나요:
 search-results-no-results=결과가 없습니다.
-# Fuzzy
-search-results-close=닫기
+search-results-close=검색 결과 닫기
+search-button=이 텍스트로 위키백과 검색하기
+search-placeholder=검색
