--- a/assets/www/messages/messages-lt.properties
+++ b/assets/www/messages/messages-lt.properties
@@ -6,6 +6,7 @@
 sitename=Vikipedija
 spinner-loading=Kraunasi ...
 spinner-retrieving=Gaunamas turinys iš $1...
+saved-pages-clear-all=Išvalyti visus išsaugotus puslapius
 saved-pages-max-warning=Jūs pasiekė didžiausią įrašytų puslapių skaičių.
 page-saved=$1 išsaugotas.
 page-already-saved=$1 jau yra išsaugotas.
@@ -16,6 +17,7 @@ menu-language=Skaityti...
 menu-savePage=Išsaugoti puslapį
 menu-savedPages=Išsaugoti puslapius
 menu-history=Istorija
+menu-back=Atgal
 menu-forward=Pirmyn
 menu-nearby=Netoli
 menu-settings=Nustatymai
