--- a/assets/www/messages/messages-map-bms.properties
+++ b/assets/www/messages/messages-map-bms.properties
@@ -45,3 +45,7 @@ history-title=Riwayat kaca
 about-version=Versi
 about-copyright=(C) Hak cipta Wikimedia Foundation lan para pengembang sing aweh kontribusi
 about-license=Aplikasi kiye kuwe piranti alus bebas nang ngisore Lisensi Publik Umum GNU. Rika olih nyebarna lan ngowahi asal Rika ngetutna kondisi ''tertentu''. Deleng http://www.gnu.org/licenses/old-licenses/gpl-2.0.html kango rinciane. Kode sumbere disediakna nang https://github.com/Wikimedia/WikipediaMobile
+search-results-no-results=Ora nemokna hasile
+search-results-close=Tutup hasil penggoletan
+search-button=Goleti teks kiye nang Wikipedia
+search-placeholder=Goleti
