--- a/assets/www/messages/messages-mk.properties
+++ b/assets/www/messages/messages-mk.properties
@@ -7,12 +7,17 @@
 sitename=Википедија
 spinner-loading=Вчитувам...
 spinner-retrieving=Преземам содржина од $1...
+saved-pages-clear-all=Исчисти ги сите зачувани страници
+saved-pages-close=Затвори го екранот со зачувани страници
 saved-pages-max-warning=Го достигнавте максималниот број на зачувани страници.
 page-saved=Страницата $1 e зачувана.
 page-already-saved=Страницата $1 е веќе зачувана.
 saved-page-remove-prompt=Да ја остранам страницата $1 од зачувани?
+clear-all-history-prompt=Да ја исчистам историјата?
+clear-all-saved-pages-prompt=Да ги исчистам сите зачувани страници?
 saved-page-removed=Страницата $1 е отстранета.
 saved-pages-title=Зачувани страници
+menu-home=Главна страница на Википедија
 menu-language=Смени јазик
 menu-savePage=Зачувај страница
 menu-savedPages=Зачувани страници
@@ -25,6 +30,9 @@ menu-selectText=Избери го текстот
 menu-sharePage=Сподели ја страницата
 menu-about=За програмот
 menu-cancel=Откажи
+menu-output=Испис
+menu-sources=Извори
+settings-close=Затвори го екранот за нагодувања
 settings-title=Нагодувања
 settings-app-version-label=Верзија на додатокот:
 settings-android-version-label=Верзија на Android:
@@ -36,23 +44,29 @@ settings-font-size-desc=Измена на големината на фонтот
 settings-font-size-smaller=Мал
 settings-font-size-normal=Нормален
 settings-font-size-larger=Голем
+langlinks-close=Затвори го екранот за други јазици
 langlinks-title=Прочитајте ја статијата на...
 error-not-available=Нажалост, оваа страница е недостапна.
 error-offline=Веројатно сте исклучени, а страницата не ви е претходно зачувана.
+error-offline-prompt=Обидете се повторно кога ќе се поврзете на мрежа.
 error-saved-or-online=Можете да отворите зачувана страница или да побарате статија кога сте вклучени.
 error-not-found=Нажалост, не постои статија со тоа име.
 error-not-found-reason=Може погрешно да сте го напишале насловот, или пак можеби статијата сè уште не е создадена.
 error-search-again=Пребарајте друг поим.
 about-page-label=За нас
+history-clear-all=Исчисти историја
+history-close=Затвори го екранот за историја
 history-title=Историја
+about-close=Затвори го екранот за прилогот
 about-page-title=За програмот
 about-version=Верзија
 about-copyright=Овој прилог е заштитен: авторски права (C) Фондација Викимедија и учесници во развојот
 about-license=Овој прилог е слободна програмска опрема издадена под ГНУ-овата општа јавна лиценца. Можете слободно да го распространувате и менувате, под извесни услови. Повеќе на http://www.gnu.org/licenses/old-licenses/gpl-2.0.html. Изворниот код ќе го најдете на https://github.com/Wikimedia/WikipediaMobileС
+nearby-close=Затвори го екранот за соседни страници
 nearby-title=Околни страници
-# Fuzzy
-app-description=Официјален прилог на Википедија за Android. Википедија е слободна енциклопедија што содржи над 20 милиони статии на 280 јазици. Таа е најопфатното и најкористеното прирачно дело во историјата на човештвото.\n\nМожности: зачувување на статија за подоцнежно читање вон линија, пребарување на околни статии, споделување на статии со функцијата „Сподели“ на Android, читање на статии на различни јазици, полно пребарување на екранот итн.
+app-description=Официјален прилог на Википедија за Android. Википедија е слободна енциклопедија што содржи над 20 милиони статии на 280 јазици. Таа е најопфатното и најкористеното прирачно дело во историјата на човештвото.\n\nМожности: зачувување на статија за подоцнежно читање вон линија, пребарување на околни статии, споделување на статии со функцијата „Сподели“ на Android, читање на статии на различни јазици, полно пребарување на екранот итн.\n\nБи ценеле доколку го искажете вашето мислење на Twitter со @WikimediaMobile.
 search-results-did-you-mean-label=Дали мислевте на:
 search-results-no-results=Нема пронајдено резултати
-# Fuzzy
-search-results-close=Затвори
+search-results-close=Затвори резултати
+search-button=Пребарајте го текстов во Википедија
+search-placeholder=Пребарај
