--- a/assets/www/messages/messages-pl.properties
+++ b/assets/www/messages/messages-pl.properties
@@ -31,6 +31,7 @@ menu-selectText=Zaznacz tekst
 menu-sharePage=Udostępnij stronę
 menu-about=O...
 menu-cancel=Anuluj
+menu-output=Wynik
 menu-sources=Źródła
 settings-close=Zamknij ekran ustawień
 settings-title=Ustawienia
@@ -48,19 +49,25 @@ langlinks-close=Zamknij ekran wyboru języka
 langlinks-title=Przeczytaj w...
 error-not-available=Niestety, ta strona nie jest dostępna.
 error-offline=Pracujesz w trybie offline, a strona nie została wcześniej zapisana.
+error-offline-prompt=Spróbuj ponownie po połączeniu z siecią.
 error-saved-or-online=Możesz otworzyć zapisaną stronę lub wyszukać ją w trybie online.
 error-not-found=Niestety, strona o tej nazwie nie istnieje.
 error-not-found-reason=Tytuł strony nie jest poprawny lub strona o podanej nazwie jeszcze nie istnieje.
 error-search-again=Wyszukaj inne hasło.
 about-page-label=O nas
+history-clear-all=Wyczyść historię
+history-close=Zamknij ekran historii
 history-title=Historia i autorzy
+about-close=Zamknij ekran informacji
 about-page-title=O programie
 about-version=Wersja
 about-copyright=Prawa autorskie do tej aplikacji należą do (c) Fundacji Wikimedia i tworzących aplikację programistów
 about-license=Niniejsza aplikacja jest wolnym oprogramowaniem na licencji GNU GPL. Możesz ją rozprowadzać i modyfikować pod pewnymi warunkami. Patrz http://www.gnu.org/licenses/old-licenses/gpl-2.0.html, aby uzyskać szczegółowe informacje. Kod źródłowy jest dostępny pod adresem https://github.com/Wikimedia/WikipediaMobile
-nearby-title=Sąsiednie strony
+nearby-close=Zamknij ekran stron w pobliżu
+nearby-title=Strony w pobliżu
 app-description=Oficjalna aplikacja Wikipedii dla systemu Android. Wikipedia jest wolną encyklopedią, zawierającą ponad 20 milionów artykułów w 280 językach. Jest najpełniejszym i najczęściej wykorzystywanym kompendium wiedzy jakie kiedykolwiek zebrano.\n\nDostępne funkcje: zapisywanie artykułu do późniejszego odczytu w trybie offline, wyszukiwanie artykułów poświęconych miejscom znajdującym się w pobliżu, udostępnianie artykułów za pomocą funkcji „Udostępnij” systemu Android, artykuły dostępne w wielu językach, łatwe wyszukiwanie i przejrzysty układ wyników wyszukiwania\n\nWyślij nam swoją opinię na Twitterze @WikimediaMobile.
 search-results-did-you-mean-label=Czy chodziło Ci o:
 search-results-no-results=Nie znaleziono
-# Fuzzy
-search-results-close=Zamknij
+search-results-close=Wyczyść wyniki wyszukiwania
+search-button=Wyszukaj ten tekst w Wikipedii
+search-placeholder=Szukaj
