--- a/assets/www/messages/messages-qqq.properties
+++ b/assets/www/messages/messages-qqq.properties
@@ -29,6 +29,8 @@ menu-selectText=[[File:Wikimedia-mobile-select-text.png|133px|right]]\nAndroid m
 menu-sharePage=[[File:Wikimedia-mobile-share-page.png|200px|right]]\nAndroid menu item for sharing/sending a link to the current page; pressing this brings up a menu of other applications which can accept text postings (example: email, SMS, Facebook, Twitter, note-taking apps). Should use same translation as Android Browser app's "Share page" menu item if available for consistency.
 menu-about=<del>Opens the ''About Wikipedia'' page.</del> It is <del>not</del> used for an about box with information about the application. <del>Developers are thinking of adding such a window. For now, it will be ''About Wikipedia''.</del>\n{{Identical|About}}
 menu-cancel={{Identical|Cancel}}
+menu-output={{Identical|Output}}
+menu-sources={{Identical|Source}}
 settings-title={{Identical|Settings}}
 settings-language-label={{Identical|Language}}
 settings-language-desc=Text label for language selector in settings. $1 is the localised site name.
@@ -42,3 +44,4 @@ about-version={{Identical|Version}}
 nearby-title=This means "Pages about things that are nearby", geography-wise.
 app-description=This is the message that is used for the application in the Android Market, that users will see before they download the app.
 search-results-close=Close search results
+search-placeholder={{Identical|Search}}
