--- a/assets/www/messages/messages-ro.properties
+++ b/assets/www/messages/messages-ro.properties
@@ -6,14 +6,19 @@
 sitename=Wikipedia
 spinner-loading=Se încarcă...
 spinner-retrieving=Se obține conținut de la $1...
+saved-pages-clear-all=Șterge toate paginile salvate
+saved-pages-close=Închide ecranul cu pagini salvate
 saved-pages-max-warning=Ați atins numărul maxim de pagini salvate.
-page-saved=$1 salvat.
-page-already-saved=$1 deja salvat.
+page-saved=S-a salvat $1.
+page-already-saved=$1 este deja salvată.
 saved-page-remove-prompt=Eliminați $1 din paginile salvate?
-saved-page-removed=$1 a fost eliminat.
+clear-all-history-prompt=Ștergeți istoricul?
+clear-all-saved-pages-prompt=Ștergeți toate paginile salvate?
+saved-page-removed=$1 a fost eliminată.
 saved-pages-title=Pagini salvate
+menu-home=Pagina principală a Wikipediei
 menu-language=În alte limbi...
-menu-savePage=Salvați pagina
+menu-savePage=Salvare pagină
 menu-savedPages=Pagini salvate
 menu-history=Istoric
 menu-back=Înapoi
@@ -24,6 +29,9 @@ menu-selectText=Selectează textul
 menu-sharePage=Distribuie pagina
 menu-about=Despre
 menu-cancel=Revocare
+menu-output=Date de ieșire
+menu-sources=Surse
+settings-close=Închide ecranul cu setări
 settings-title=Setări
 settings-app-version-label=Versiunea aplicației:
 settings-android-version-label=Versiunea pentru Android:
@@ -35,23 +43,29 @@ settings-font-size-desc=Setați dimensiunea fontului articolelor
 settings-font-size-smaller=Mic
 settings-font-size-normal=Normal
 settings-font-size-larger=Mare
+langlinks-close=Închide ecranul de citire în alte limbi
 langlinks-title=Citiți articolul în...
 error-not-available=Ne pare rău, această pagină nu este disponibilă.
 error-offline=Sunteți deconectat și pagina nu a fost salvată anterior.
+error-offline-prompt=Vă rugăm să încercați din nou atunci când veți fi conectat la o rețea.
 error-saved-or-online=Puteți deschide o pagină salvată sau puteți căuta on-line.
 error-not-found=Ne pare rău, nu există niciun articol cu acest nume.
 error-not-found-reason=S-ar putea să fi scris greșit titlul, sau articolul nu a fost creat.
 error-search-again=Vă rugăm să căutați un alt termen.
 about-page-label=Despre noi
+history-clear-all=Curăță istoricul
+history-close=Închide ecranul cu istoric
 history-title=Istoric
+about-close=Închide ecranul cu informații despre
 about-page-title=Despre
 about-version=Versiune
 about-copyright=Drepturile de autor asupra acestei aplicații aparțin Fundației Wikimedia și dezvoltatorilor contribuitori
 about-license=Această aplicație este un software gratuit sub Licența Publică Generală GNU. Sunteți invitat să o distribuiți și să o modificați anumite condiții. Consultați http://www.gnu.org/licenses/old-licenses/gpl-2.0.html pentru detalii. Codul sursă este disponibil la https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Închide ecranul cu pagini din apropiere
 nearby-title=Pagini din apropiere
-# Fuzzy
-app-description=Aplicația oficială a Wikipediei pentru Android. Wikipedia este enciclopedia liberă care conține peste 20 de milioane de articole în 280 de limbi, fiind cea mai cuprinzătoare și utilizată sursă bibliografică pe care au oamenii au alcătuit-o vreodată.\n\nCaracteristici: salvarea articolului pentru o lectură ulterioară sau în mod off-line; căutarea articolelor despre locurile din apropierea dumneavoastră; distribuirea articolelor utilizând funcția „Partajare” din Android; citirea articolului într-o altă limbă; căutare în modul ecran complet.
+app-description=Aplicația oficială a Wikipediei pentru Android. Wikipedia este enciclopedia liberă care conține peste 20 de milioane de articole în 280 de limbi, fiind cea mai cuprinzătoare și utilizată sursă bibliografică pe care au oamenii au alcătuit-o vreodată.\n\nCaracteristici: salvarea articolului pentru o lectură ulterioară sau în mod off-line; căutarea articolelor despre locurile din apropierea dumneavoastră; distribuirea articolelor utilizând funcția „Partajare” din Android; citirea articolului într-o altă limbă; căutare în modul ecran complet.\n\nSpuneți-ne părerea dumneavoastră pe Twitter @WikimediaMobile.
 search-results-did-you-mean-label=V-ați referit la:
 search-results-no-results=Niciun rezultat găsit
-# Fuzzy
-search-results-close=Închide
+search-results-close=Închide rezultatele căutării
+search-button=Caută acest text în Wikipedia
+search-placeholder=Căutare
