--- a/assets/www/messages/messages-ru.properties
+++ b/assets/www/messages/messages-ru.properties
@@ -11,12 +11,17 @@
 sitename=Википедия
 spinner-loading=Загрузка...
 spinner-retrieving=Получение содержимого из $1...
+saved-pages-clear-all=Очистить все сохраненные страницы
+saved-pages-close=Очистить экран сохранённых страниц
 saved-pages-max-warning=Вы достигли предельного числа сохранённых страниц.
 page-saved=Страница $1 сохранена.
 page-already-saved=Страница $1 уже сохранена.
 saved-page-remove-prompt=Удалить $1 из сохранённых страниц?
+clear-all-history-prompt=Очистить историю?
+clear-all-saved-pages-prompt=Очистить все сохраненные страницы?
 saved-page-removed=Страница $1 удалена.
 saved-pages-title=Сохранённые страницы
+menu-home=Домашняя страница Википедии
 menu-language=Прочесть по-...
 menu-savePage=Сохранить страницу
 menu-savedPages=Сохранённые страницы
@@ -29,6 +34,8 @@ menu-selectText=Выделить текст
 menu-sharePage=Сохранить страницу
 menu-about=О приложении
 menu-cancel=Отмена
+menu-output=Результат
+menu-sources=Откуда:
 settings-title=Настройки
 settings-app-version-label=Версия приложения:
 settings-android-version-label=Версия Android:
@@ -54,8 +61,9 @@ about-version=Версия
 about-copyright=Это приложение защищается авторским правом (C) Фонд Викимедиа и участвовавшие разработчики
 about-license=Это приложение является свободным программным обеспечением на условиях GNU General Public License. Вы можете распространять и изменять его при определённых условиях. Подробнее смю http://www.gnu.org/licenses/old-licenses/gpl-2.0.html . Исходный код доступен на https://github.com/Wikimedia/WikipediaMobile
 nearby-title=Страницы вблизи
-app-description=Официальное приложение для чтения Википедии в аппаратах Android. Википедия – свободная энциклопедия, содержащая более 20 миллионов статей на 280 языках, и являющаяся наиболее всеобъемлющей и широко используемой людьми справочной работой, из всех когда-либо составленных.\n\nВозможности: Сохранение статьи для более позднего чтения или для чтения в автономном режиме, поиск статей поблизости с помощью GPS, публикация статей с использованием функции Android «Публикация», чтение статьи на других языках, поиск в полном экране.\n\nПрисылайте нам свои отзывы на Twitter – @WikimediaMobile.
+app-description=Официальное приложение для чтения Википедии в аппаратах Android. Википедия – свободная энциклопедия, содержащая более 20 миллионов статей на 280 языках, и являющаяся наиболее всеобъемлющей и широко используемой людьми справочной работой, из всех когда-либо составленных.\n\nВозможности: Сохранение статьи для более позднего чтения или для чтения в автономном режиме, поиск статей поблизости с помощью GPS, публикация статей с использованием функции Android «Публикация», чтение статьи на других языках, поиск в ширину экрана.\n\nПрисылайте нам свои отзывы на Twitter – @WikimediaMobile.
 search-results-did-you-mean-label=Возможно, вы имели в виду:
 search-results-no-results=Ничего не найдено
-# Fuzzy
-search-results-close=Закрыть
+search-results-close=Закрыть результаты поиска
+search-button=Искать в Википедии этот текст
+search-placeholder=Поиск
