--- a/assets/www/messages/messages-sr-el.properties
+++ b/assets/www/messages/messages-sr-el.properties
@@ -6,12 +6,17 @@
 sitename=Vikipedija
 spinner-loading=Učitavam…
 spinner-retrieving=Preuzimam sadržaj iz $1…
+saved-pages-clear-all=Očisti sve sačuvane stranice
+saved-pages-close=Zatvori ekran sa sačuvanim stranicama
 saved-pages-max-warning=Dostigli ste najveći broj sačuvanih stranica.
 page-saved=Stranica $1 je sačuvana.
 page-already-saved=Stranica $1 je već sačuvana.
 saved-page-remove-prompt=Ukloniti stranicu $1 iz sačuvanih?
+clear-all-history-prompt=Očistiti istoriju?
+clear-all-saved-pages-prompt=Očistiti sve sačuvane stranice?
 saved-page-removed=Stranica $1 je uklonjena.
 saved-pages-title=Sačuvane stranice
+menu-home=Glavna strana Vikipedije
 menu-language=Promeni jezik
 menu-savePage=Sačuvaj stranicu
 menu-savedPages=Sačuvane stranice
@@ -24,6 +29,9 @@ menu-selectText=Izaberi tekst
 menu-sharePage=Deli stranicu
 menu-about=O programu
 menu-cancel=Otkaži
+menu-output=Izlaz
+menu-sources=Izvori
+settings-close=Zatvori ekran za podešavanja
 settings-title=Postavke
 settings-app-version-label=Verzija programa:
 settings-android-version-label=Verzija Androida:
@@ -35,23 +43,29 @@ settings-font-size-desc=Promenite veličinu fonta u člancima.
 settings-font-size-smaller=Mala
 settings-font-size-normal=Normalna
 settings-font-size-larger=Velika
+langlinks-close=Zatvori ekran za druge jezike
 langlinks-title=Pročitajte članak na…
 error-not-available=Nažalost, ova stranica nije dostupna.
 error-offline=Verovatno ste van mreže, a stranica nije prethodno sačuvana.
+error-offline-prompt=Pokušajte ponovo kada budete povezani na internet.
 error-saved-or-online=Možete da otvorite sačuvanu stranicu ili da pretražite članak na mreži.
 error-not-found=Nažalost, ne postoji članak s tim imenom.
 error-not-found-reason=Možda se pogrešni napisali naslov, ili pak može biti da članak ne postoji.
 error-search-again=Pretražite drugi pojam.
 about-page-label=O nama
+history-clear-all=Očisti istoriju
+history-close=Očisti ekran za istoriju
 history-title=Istorija
+about-close=Zatvori ekran o programu
 about-page-title=O programu
 about-version=Verzija
 about-copyright=Sva prava zadržana © Zadužbina Vikimedija i razvojni programeri
 about-license=Ovaj program je slobodan i dostupan je pod GNU-ovom opštom javnom licencom. Slobodno možete da ga raspodeljujete i menjate pod određenim uslovima. Pogledajte http://www.gnu.org/licenses/old-licenses/gpl-2.0.html za više informacija. Izvorni kod se nalazi na https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Zatvori ekran za okolne stranice
 nearby-title=Okolne stranice
-# Fuzzy
-app-description=Zvaničan program za pregledanje Vikipedije na Androidu. Vikipedija je slobodna enciklopedija koja sadrži preko 20 miliona članaka na 280 jezika. Ona je najobimnije i najkorisnije priručno delo u istoriji čovečanstva.\n\nMogućnosti: čuvanje članaka za kasnije čitanje van mreže, pretraživanje okolnih članaka, deljenje članaka s funkcijom „Deli stranicu“, čitanje članaka na različitim jezicima, pretraživanje na celom ekranu itd.
+app-description=Zvaničan program za pregledanje Vikipedije na Androidu. Vikipedija je slobodna enciklopedija koja sadrži preko 20 miliona članaka na 280 jezika. Ona je najobimnije i najkorisnije priručno delo u istoriji čovečanstva.\n\nMogućnosti: čuvanje članaka za kasnije čitanje van mreže, pretraživanje okolnih članaka, deljenje članaka s funkcijom „Deli stranicu“, čitanje članaka na različitim jezicima, pretraživanje na celom ekranu itd.\n\nPošaljite nam povratnu informaciju na Tviter (@WikimediaMobile).
 search-results-did-you-mean-label=Da li ste mislili na:
 search-results-no-results=Nema rezultata
-# Fuzzy
-search-results-close=Zatvori
+search-results-close=Zatvori rezultate
+search-button=Pretraži tekst na Vikipediji
+search-placeholder=Pretraži
