--- a/assets/www/messages/messages-ta.properties
+++ b/assets/www/messages/messages-ta.properties
@@ -1,6 +1,7 @@
 # This file is distributed under the same license as the Wikipedia Mobile package.
 #
 # Author: Aswn
+# Author: Balajijagadesh
 # Author: Shanmugamp7
 # Author: Surya Prakash.S.A.
 
@@ -25,6 +26,8 @@ menu-selectText=உரையைத் தேர்ந்தெடு
 menu-sharePage=பக்கத்தைப் பகிர்க
 menu-about=விவரம்
 menu-cancel=ரத்து செய்
+menu-sources=மூலங்கள்
+settings-close=அமைப்புகள் திரையை மூடவும்
 settings-title=அமைப்புகள்
 settings-app-version-label=பயன்பாடு பதிப்பு:
 settings-android-version-label=ஆண்ட்ராய்டு பதிப்பு:
@@ -39,11 +42,22 @@ settings-font-size-larger=பெரிய
 langlinks-title=கட்டுரையில்  உள்ளவற்றை படிக்க...
 error-not-available=மன்னிக்கவும், இந்த பக்கம் கிடைக்கப் பெறவில்லை.
 error-offline=நீங்கள் இணைப்பில் இல்லை  (offline) மேலும்ஏற்கனவே  இப்பக்கம் சேமிக்கபடவில்லை.
+error-offline-prompt=தங்களுக்கு இனைப்பு இருக்கும் பொழுது மீண்டும் முயற்சி செய்யவும்
 error-saved-or-online=நீங்கள் சேமித்த பக்கத்தை திறக்கவும்  அல்லது இணைப்பில் சென்று தேடவும்.
 error-not-found=மன்னிக்கவும், அந்த பெயர் கொண்ட கட்டுரை ஏதுமில்லை.
 error-not-found-reason=நீங்கள் தலைப்பை தவறாக எழுத்துக்கோர்வையாக்கி இருக்கலாம், அல்லது இந்த கட்டுரை உருவாக்கப்படாமலிருக்கலாம்.
 error-search-again=தயவு செய்து வேறு வார்த்தைக்கு தேடவும்.
+about-page-label=எங்களை பற்றி
+history-clear-all=வரலாற்றை துடை
+history-close=வரலாறு திரையை மூடு
 history-title=வரலாறு
+about-close=எங்களை பற்றி திறையை மூடு
+about-page-title=விவரம்
 about-version=பதிப்பு
 about-copyright=  இந்த பயன்பாட்டின்  காப்புரிமை (C) விக்கிமீடியா அறக்கட்டளை மற்றும் பங்களிக்கும் உருவாக்குநர்கள்
 about-license=இந்த பயன்பாடு ஒரு இலவசமான மென்பொருள் GNU பொது உரிமத்தின் கீழ் வழங்கப்பட்டுள்ளது.சில விதிமுறைகளின் கீழ் நீங்கள் இதை வெளியிட மற்றும் திருத்த  உங்களை வரவேற்கிறோம்.மேலும் விவரங்களுக்கு பார்க்கவும்.http://www.gnu.org/licenses/old-licenses/gpl-2.0.html.மூல நிரலானது \nhttps://github.com/Wikimedia/WikipediaMobile இங்கே உள்ளது.
+nearby-title=பக்கத்து பக்கங்கள்
+search-results-no-results=முடிவுகள் எதுவும் காணப்படவில்லை
+search-results-close=தேடல் முடிவுகளை மூடு
+search-button=விக்கிபீடியாவில் இந்த உரையை தேடு
+search-placeholder=தேடுக
