--- a/assets/www/messages/messages-zh-hans.properties
+++ b/assets/www/messages/messages-zh-hans.properties
@@ -9,12 +9,17 @@
 sitename=维基百科
 spinner-loading=正在载入…
 spinner-retrieving=从$1检索内容…
+saved-pages-clear-all=清除所有已保存页面
+saved-pages-close=关闭已保存页面的屏幕
 saved-pages-max-warning=您已经达到保存的页面的最大数量。
 page-saved=$1已保存。
 page-already-saved=$1已被保存过。
 saved-page-remove-prompt=从已保存的页面中移除$1？
+clear-all-history-prompt=清除历史？
+clear-all-saved-pages-prompt=清除所有已保存页面吗？
 saved-page-removed=$1已被移除。
 saved-pages-title=已保存页面
+menu-home=维基百科主页
 menu-language=其他语言...
 menu-savePage=保存页面
 menu-savedPages=已保存页面
@@ -27,6 +32,9 @@ menu-selectText=选择文本
 menu-sharePage=分享本页
 menu-about=关于
 menu-cancel=取消
+menu-output=输出
+menu-sources=来源
+settings-close=关闭设置的屏幕
 settings-title=设置
 settings-app-version-label=应用程序版本：
 settings-android-version-label=Android 版本：
@@ -38,23 +46,29 @@ settings-font-size-desc=设置条目字体大小
 settings-font-size-smaller=小
 settings-font-size-normal=中
 settings-font-size-larger=大
+langlinks-close=关闭阅读其他语言版本的屏幕
 langlinks-title=阅读其他语言版本...
 error-not-available=对不起，此页面不可用。
 error-offline=您已离线并且这个页面未被保存。
+error-offline-prompt=请在连接到网络时再试一试。
 error-saved-or-online=您可以打开已保存的页面或者连接网络并搜索。
 error-not-found=对不起，此名称的条目不存在。
 error-not-found-reason=您可能错误地拼写了标题，或者条目还没有被创建。
 error-search-again=请搜索另一个关键字。
 about-page-label=关于我们
+history-clear-all=清除历史
+history-close=关闭历史的屏幕
 history-title=历史
+about-close=关闭关于我们的屏幕
 about-page-title=关于
 about-version=版本
 about-copyright=本应用程序的版权 (C) 属于维基媒体基金会以及参与贡献的开发者
 about-license=本应用程序是一个GNU通用公共许可（GNU GPL）授权的自由软件。欢迎您在指定条款下分发和修改，详情见http://www.gnu.org/licenses/old-licenses/gpl-2.0.html 。源代码位于https://github.com/Wikimedia/WikipediaMobile
+nearby-close=关闭附近的页面的屏幕
 nearby-title=附近的页面
-# Fuzzy
-app-description=为Android平台提供的维基百科官方应用程序。维基百科是自由的百科全书，其中包含以280种语言写成的2000多万条目，于是史上最详尽以及最广泛使用的人力编译作品。\n\n其功能包括：保存页面以便可以往后或离线时阅读、搜索附近的页面、使用Android的“分享”功能来分享条目、阅读各种语言的条目、全屏搜索等等。
+app-description=为Android平台提供的维基百科官方应用程序。维基百科是自由的百科全书，其中包含以280种语言写成的2000多万条目，于是史上最详尽以及最广泛使用的人力编译作品。\n\n其功能包括：保存页面以便可以往后或离线时阅读、搜索附近的页面、使用Android的“分享”功能来分享条目、阅读各种语言的条目、全屏搜索等等。\n\n若有任何意见，请浏览我们在Twitter的@WikimediaMobile帐号来传送反馈。
 search-results-did-you-mean-label=您是不是要找：
 search-results-no-results=无搜索结果
-# Fuzzy
-search-results-close=关闭
+search-results-close=关闭搜索结果
+search-button=在维基百科寻找这段文本
+search-placeholder=搜索
