--- a/assets/www/messages/messages-dsb.properties
+++ b/assets/www/messages/messages-dsb.properties
@@ -6,12 +6,17 @@
 sitename=Wikipedija
 spinner-loading=Zacytujo se...
 spinner-retrieving=Wótwołujo se wopśimjeśe z $1...
+saved-pages-clear-all=Wšykne składowane boki wulašowaś
+saved-pages-close=Wobrazowku składowanych bokow zacyniś
 saved-pages-max-warning=Sćo maksimalnu licbu składowanych bokow dojśpił.
 page-saved=$1 jo se składował.
 page-already-saved=$1 jo se južo składował.
 saved-page-remove-prompt=$1 ze składowanych bokow wótpóraś?
+clear-all-history-prompt=Historiju wulašowaś?
+clear-all-saved-pages-prompt=Wšykne składowane boki wulašowaś?
 saved-page-removed=$1 jo se wótpórał.
 saved-pages-title=Składowane boki
+menu-home=Startowy bok Wikipedije
 menu-language=Rěc změniś
 menu-savePage=Bok składowaś
 menu-savedPages=Składowane boki
@@ -24,6 +29,9 @@ menu-selectText=Tekst wubraś
 menu-sharePage=Bok z drugimi źěliś
 menu-about=Wó
 menu-cancel=Pśetergnuś
+menu-output=Wudaśe
+menu-sources=Žrědła
+settings-close=Wobrazowku "Nastajenja" zacyniś
 settings-title=Nastajenja
 settings-app-version-label=Aplikaciska wersija:
 settings-android-version-label=Androidowa wersija:
@@ -35,23 +43,29 @@ settings-font-size-desc=Wjelikosć pisma nastawka nastajiś
 settings-font-size-smaller=Mały
 settings-font-size-normal=Normalna
 settings-font-size-larger=Wjeliki
+langlinks-close=Wobrazowku "w drugich rěcach cytaś" zacyniś
 langlinks-title=Nastawk cytaś w...
 error-not-available=Toś ten bok bóžko njestoj k dispoziciji.
 error-offline=Snaź sy offline abo bok hyšći njejo se składował.
+error-offline-prompt=Pšosym wopytajśo hyšći raz, gaž sy ze seśu zwězany.
 error-saved-or-online=Móžoš składowany bok wócyniś abo online hyś a pytaś.
 error-not-found=Nastawk z toś tym mjenim bóžko njeeksistěrujo.
 error-not-found-reason=Snaź sy titel wopak napisał, abo nastawk njejo se napórał.
 error-search-again=Pšosym pytaj druge zapśimjeśe.
 about-page-label=Wó nas
+history-clear-all=Historiju wulašowaś
+history-close=Wobrazowku "Historija" zacyniś
 history-title=Historija
+about-close=Wobrazowku "Wó" zacyniś
 about-page-title=Wó
 about-version=Wersija
 about-copyright=Toś ten program pódlažy awtorskemu pšawoju załožby Wikimdia Foundation a sobustatkujucych programowarjow
 about-license=Toś ten program jo licha software pód licencu GNU General Public License. Smějośo ju pód wěstymi wuměnjenjami rozšyriś a změniś. Glědaj http://www.gnu.org/licenses/old-licenses/gpl-2.0.html za drobnostki. Žrědłowy code stoj na https://github.com/Wikimedia/WikipediaMobile k dispoziciji.
+nearby-close=Wobrazowku "Pódobne boki" zacyniś
 nearby-title=Pódobne boki
-# Fuzzy
-app-description=Oficielna aplikacija za Wikipediju za softwaru Android. Wikipedija jo licha encyklopedija, kótaraž wopśimujo wěcej ako 20 milionow nastawkow w 280 rěcach a jo nejwobyrnjejša  a nejwěcej wužywana zběrka wědy, kótaruž luźe su gdy zestajali.\n\nPśiznamjenja: Nastawki składowaś, aby mógło je pózdźej offline cytaś, pódobne nastawki pytaś, źěl nastawki z drugimi wósobami z pomocu funkcije "Źěliś" (Teilen) softwary Android, nastawki w drugej rěcy cytaś, połnowobrazowe pytanje
+app-description=Oficielna aplikacija za Wikipediju za softwaru Android. Wikipedija jo licha encyklopedija, kótaraž wopśimujo wěcej ako 20 milionow nastawkow w 280 rěcach a jo nejwobyrnjejša  a nejwěcej wužywana zběrka wědy, kótaruž luźe su gdy zestajali.\n\nPśiznamjenja: Nastawki składowaś, aby mógło je pózdźej offline cytaś, pódobne nastawki pytaś, źěl nastawki z drugimi wósobami z pomocu funkcije "Źěliś" (Teilen) softwary Android, nastawki w drugej rěcy cytaś, połnowobrazowe pytanje.\n\nPósćelśo nam swóje komentary pśez Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Sy ty měnił:
 search-results-no-results=Žedne wuslědki namakane
-# Fuzzy
-search-results-close=Zacyniś
+search-results-close=Pytańske wuslědki zacyniś
+search-button=Wikipediju za toś tym tekstom pśepytaś
+search-placeholder=Pytaś
