--- a/assets/www/messages/messages-gu.properties
+++ b/assets/www/messages/messages-gu.properties
@@ -5,19 +5,66 @@
 sitename=વિકિપીડિયા
 spinner-loading=લવાઇ રહ્યું છે...
 spinner-retrieving=વેબસાઇટ પર થી લેવાય રહ્યું છે $1...
+saved-pages-clear-all=બધા સાંચ્વેલા પાનાં સાફ કરો
+saved-pages-close=સાંચ્વેલા પાનાં ની સ્ક્રિન બંધ કરો
 saved-pages-max-warning=તમે પાનાઓ સાંચવવા ની મહત્તમ સંખ્યા સુધી પહોંચી ગયા છો.
 page-saved=$1 સંચવાય ગયું છે.
+page-already-saved=$1 પહેલા થી જ સેવ કરેલ છે.
+saved-page-remove-prompt=$1 સાંચ્વેલા પાનાં માંથી કાઢવું છે?
+clear-all-history-prompt=ઇતિહાસ હટાવો?
+clear-all-saved-pages-prompt=બધા સાંચ્વેલા પાનાં સાફ કરો?
+saved-page-removed=$1 બુકમાર્ક કાઢી નાખ્યું.
+saved-pages-title=સાંચ્વેલા પાનાઓ.
+menu-home=વિકિપીડિયા હોમપેજ
+menu-language=માં વાંચો...
+menu-savePage=પાનું સાંચ્વો
+menu-savedPages=સાંચ્વેલા પાનાઓ.
 menu-history=ઇતિહાસ
+menu-back=પાછાં જાવ
 menu-forward=આગળ વધો
 menu-nearby=નજીક માં
 menu-settings=ગોઠવણ
 menu-selectText=લખાણ પસંદ કરો
 menu-sharePage=સાચવો
 menu-about=વિષે
+menu-cancel=રદ કરો
+menu-output=ઉત્પાદન
+menu-sources=સ્ત્રોત
+settings-close=સેટ્ટિન્ગ્સ નિ સ્ક્રીન બન્ધ કરો
 settings-title=ગોઠવણ
 settings-app-version-label=એપ્લિકેશન આવૃત્તિ:
 settings-android-version-label=એન્ડ્રોઇડ આવૃત્તિ:
 settings-phonegap-version-label=ફોનગેપ આવૃત્તિ:
 settings-language-label=ભાષા:
-# Fuzzy
-settings-language-desc=તમારી વિકિપીડિયા ભાષા સુયોજિત કરો
+settings-language-desc=$1 માટે ભાષા સેટ કરો
+settings-font-size-label=ફોન્ટ નો આકાર
+settings-font-size-desc=પાનાં પર ના ફોન્ટ નો આકાર સેટ કરો
+settings-font-size-smaller=નાનું
+settings-font-size-normal=સામાન્ય
+settings-font-size-larger=મોટું
+langlinks-close=અન્ય ભાષા ની સ્ક્રીન માં વાંચવાનું બંધ કરો
+langlinks-title=લેખ માં વાંચો...
+error-not-available=માફ કરશો, આ પાનું ઉપલબ્ધ નથી.
+error-offline=આપ ઑફલાઇન છો અને પાનું પહેલા સેવ થયેલ નથી.
+error-offline-prompt=જ્યારે તમે નેટવર્ક પર જોડાયેલ હોવ ત્યારે ફરીથી પ્રયત્ન કરો.
+error-saved-or-online=તમે સેવ્ડ પાનું ખોલી શકો છો અથવા તો ઓનલાઇન થઇ શોધી શકો છો.
+error-not-found=માફ કરો, તે નામ થી કોઈ પણ પાનું અસ્થીત્વા માં નથી.
+error-not-found-reason=તમે શીર્ષક ખોટું આપ્યું હશે અથવા તો તે લેખ અત્યાર સુધી બનાવેલ નથી.
+error-search-again=અન્ય શબ્દ માટે શોધ કરો.
+about-page-label=અમારા વિષે
+history-clear-all=ઇતિહાસ હટાવો
+history-close=ઈતિહાસ સ્ક્રીન બંધ કરો
+history-title=ઇતિહાસ
+about-close=અમારા વિષે ની સ્ક્રીન બંધ કરો
+about-page-title=વિષે
+about-version=આવૃત્તિ
+about-copyright=આ એપ્લીકેશન વિકીમીડ્યા ફાઊંડેશન અને અન્ય ડેવલપરો દ્વારા મુદ્રણાધિકારીત (C) છે
+about-license=આ સોફ્ટવેર GNU લાયસન્સ ની અંદર મફત છે. આનું વિતરણ કરવા અને તેને સુધારવા માટે તમારું સ્વાગત છે. તેના માટે આ જુઓ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html. સ્ત્રોત કોડ અહિયાં ઉપલબ્ધ છે https://github.com/Wikimedia/WikipediaMobile
+nearby-close=નજીક નાં પાનાઓ ની સ્ક્રીન બંધ કરો.
+nearby-title=નજીક નાં પાનાઓ
+app-description=એન્દ્રોય્ડ માટે સત્તાવાર વિકિપીડિયા ફોન એપ. વિકીપિડીયા મફત જ્ઞાનકોશ છે, જેમાં ૨૮૦ ભાષાઓમાં ૨ કરોડ જેટલા લેખો નો સામાવેશ થાય છે. અને સહુ થી વ્યાપક અને ઉપયોગકર્તા જ્ઞાનકોષ છે
+search-results-did-you-mean-label=શું તમે કહેવા માંગો છો:
+search-results-no-results=કોઈ પરિણામ નથી મળેલ.
+search-results-close=શોધ પરિણામો બંધ કરો
+search-button=આ ટેક્સ્ટ માટે વિકિપિડિયામાં શોધો
+search-placeholder=શોધો
