--- a/assets/www/messages/messages-he.properties
+++ b/assets/www/messages/messages-he.properties
@@ -8,12 +8,17 @@
 sitename=ויקיפדיה
 spinner-loading=טעינה...
 spinner-retrieving=אחזור תוכן מאתר $1...
+saved-pages-clear-all=ניקוי כל הדפים השמורים
+saved-pages-close=סגירת מסך דפים שמורים
 saved-pages-max-warning=הגעת למספר מרבי של דפים שאפשר לשמור.
 page-saved=הדף $1 נשמר.
 page-already-saved=הדף $1 כבר נשמר.
 saved-page-remove-prompt=להסיר את $1 מהדפים השמורים?
+clear-all-history-prompt=לנקות את ההיסטוריה?
+clear-all-saved-pages-prompt=לנקות את כל הדפים השמורים?
 saved-page-removed=הדף $1 הוסר.
 saved-pages-title=דפים שמורים
+menu-home=דף הבית של ויקיפדיה
 menu-language=החלפת שפה
 menu-savePage=שמירת דף
 menu-savedPages=דפים שמורים
@@ -26,6 +31,8 @@ menu-selectText=בחירת טקסט
 menu-sharePage=שיתוף דף
 menu-about=אודות
 menu-cancel=ביטול
+menu-sources=מקורות
+settings-close=סגירת מסך הגדרות
 settings-title=הגדרות
 settings-app-version-label=גרסת יישום:
 settings-android-version-label=גרסת אנדרואיד:
@@ -37,22 +44,29 @@ settings-font-size-desc=הגדרת גודל גופן לערכים
 settings-font-size-smaller=קטן
 settings-font-size-normal=רגיל
 settings-font-size-larger=גדול
+langlinks-close=סגירת מסך קריאה בשפה אחרת
 langlinks-title=לקרוא את הדף בשפה אחרת...
 error-not-available=סליחה, הדף הזה אינו זמין.
 error-offline=המכשיר אינו מקוון והדף לא נשמר בעבר.
+error-offline-prompt=נא לנסות כשהמכשיר מחובר לרשת.
 error-saved-or-online=אפשר לפתוח דף שמור או להתחבר לרשת ולחפש.
 error-not-found=מצטערים, אין ערך בשם כזה.
 error-not-found-reason=ייתכן שלא כתבת נכון את הכותרת או שהערך עוד לא נוצר.
 error-search-again=נא לחפש מילה אחרת.
 about-page-label=אודותינו
+history-clear-all=ניקוי היסטוריה
+history-close=סגירת מסך היסטוריה
 history-title=היסטוריה
+about-close=סגירת מסך אודות
 about-page-title=אודות
 about-version=גרסה
 about-copyright=זכויות היוצרים ליישום הזה שייכות ל־(C) קרן ויקימדיה ומפתחים נוספים שתרמו קוד
-about-license=היישום הזה הוא תכנה חופשית בהתאם רישיון הציבורי הכללי של גנו. הנכם מוזמנים להפיץ אותו ולשנות אותו בהתאם לתנאים מסוימים. ר' http://www.gnu.org/licenses/old-licenses/gpl-2.0.html לפרטים. קוד המקור זמין בכתובת https://github.com/Wikimedia/WikipediaMobile
+about-license=היישום הזה הוא תכנה חופשית בהתאם לרישיון הציבורי הכללי של גנו (GNU General Public License). הנכם מוזמנים להפיץ אותו ולשנות אותו בהתאם לתנאים מסוימים. ר' http://www.gnu.org/licenses/old-licenses/gpl-2.0.html לפרטים. קוד המקור זמין בכתובת https://github.com/Wikimedia/WikipediaMobile
+nearby-close=סגירת מסך דפים בסביבה
 nearby-title=דפים על דברים בסביבתך
-app-description=היישום הרשמי לקריאת ויקיפדיה במכשירי אנדרואיד. ויקיפדיה היא האנציקלופדיה החופשית שמכילה מעל 20 מיליון ערכים ב־280 שפות והיא היצירה העיונית הגדולה והנפוצה ביותר שבני־אדם יצרו מאז ומעולם.\n\nתכונות: שמירת ערך לקריאה מאוחר יותר או ללא חיבור לרשת, חיפוש ערכים על מקומות בסביבתך, שיתוף ערכים באמצעות פעולת ה„שיתוף” של אנדרואיד, קריאת ערכים בשפות שונות, חיפוש במסך מלא.\n\nשלחו לנו את המשוב שלכם לחשבון הטוויטר ‎@WikimediaMobile.
+app-description=היישום הרשמי לקריאת ויקיפדיה במכשירי אנדרואיד. ויקיפדיה היא האנציקלופדיה החופשית שמכילה מעל 20 מיליון ערכים ב־280 שפות והיא היצירה העיונית הגדולה והנפוצה ביותר שבני־אדם יצרו מאז ומעולם.\n\nתכונות: שמירת ערך לקריאה מאוחר יותר או ללא חיבור לרשת, חיפוש ערכים על מקומות בסביבתך, שיתוף ערכים באמצעות פעולת ה„שיתוף” של אנדרואיד, קריאת ערכים בשפות שונות, חיפוש ברוחב המסך.\n\nשלחו לנו את המשוב שלכם לחשבון הטוויטר ‎@WikimediaMobile.
 search-results-did-you-mean-label=האם התכוונת ל:
 search-results-no-results=לא נמצאו תוצאות
-# Fuzzy
-search-results-close=סגירה
+search-results-close=סגירת תוצאות חיפוש
+search-button=חיפוש טקסט זה בוויקיפדיה
+search-placeholder=חיפוש
