--- a/assets/www/messages/messages-hsb.properties
+++ b/assets/www/messages/messages-hsb.properties
@@ -6,12 +6,17 @@
 sitename=Wikipedija
 spinner-loading=Začituje so...
 spinner-retrieving=Wotwołuje so wobsah z $1...
+saved-pages-clear-all=Wšě składowane strony zhašeć
+saved-pages-close=Wobrazowku składowanych stronow začinić
 saved-pages-max-warning=Sy maksimalnu ličbu składowanych stronow docpěł.
 page-saved=$1 je so składował.
 page-already-saved=$1 je so hižo składował.
 saved-page-remove-prompt=$1 ze składowanych stronow wotstronić?
+clear-all-history-prompt=Historiju zhašeć?
+clear-all-saved-pages-prompt=Wšě składowane strony zhašeć?
 saved-page-removed=$1 je so wotstronił.
 saved-pages-title=Składowane strony
+menu-home=Startowa strona Wikipedije
 menu-language=Rěč změnić
 menu-savePage=Stronu składować
 menu-savedPages=Składowane strony
@@ -24,6 +29,9 @@ menu-selectText=Tekst wubrać
 menu-sharePage=Stronu z druhimi dźělić
 menu-about=Wo
 menu-cancel=Přetorhnyć
+menu-output=Wudaće
+menu-sources=Žórła
+settings-close=Nastajenja začinić
 settings-title=Nastajenja
 settings-app-version-label=Aplikaciska wersija:
 settings-android-version-label=Androidowa wersija:
@@ -35,23 +43,29 @@ settings-font-size-desc=Wulkosć pisma nastawka nastajić
 settings-font-size-smaller=Mały
 settings-font-size-normal=Normalna
 settings-font-size-larger=Wulki
+langlinks-close=Wobrazowku "w druhich rěčach čitać" začinić
 langlinks-title=Nastawk čitać w...
 error-not-available=Tuta strona bohužel k dispoziciji njesteji.
 error-offline=Snano sy offline abo strona hišće njeje so składowała.
+error-offline-prompt=Prošu spytajće hišće raz, hdyž sy ze syću zwjazany.
 error-saved-or-online=Móžeš składowanu stronu wočinić abo online hić a pytać.
 error-not-found=Nastawk z tutym mjenom bohužel njeeksistuje.
 error-not-found-reason=Snano sy titul wopak napisał, abo nastawk njeje so wutworił.
 error-search-again=Prošu pytaj druhe zapřijeće.
 about-page-label=Wo nas
+history-clear-all=Historiju zhašeć
+history-close=Wobrazowku "Historija" začinić
 history-title=Historija
+about-close=Wobrazowku "Wo" začinić
 about-page-title=Wo
 about-version=Wersija
 about-copyright=Tutón program podleži awtorskemu prawu załožby Wikimdia Foundation a sobuskutkowacych programowarjow
 about-license=Tutón program je swobodna softwara pod licencu GNU General Public License. Směće ju pod wěstymi wuměnjenjemi rozšěrić a změnić. Hlej http://www.gnu.org/licenses/old-licenses/gpl-2.0.html za podrobnosće. Žórłowy kod steji na https://github.com/Wikimedia/WikipediaMobile k dispoziciji.
+nearby-close=Wobrazowku "Podobne strony" začinić
 nearby-title=Podobne strony
-# Fuzzy
-app-description=Oficielna aplikacija za Wikipediju za softwaru Android. Wikipedija je swobodna encyklopedija, kotraž přez 20 milionow nastawkow w 280 rěčach wobsahuje a je najwoběrniša  a najwjace wužiwana zběrka wědy, kotruž ludźo su hdy zestajili.\n\nPřiznamjenja: Nastawki składować, zo by móhł je pozdźišo offline čitać, podobne nastawki pytać, dźěl nastawki z druhimi wosobami z pomocu funkcije "Dźělić" (Teilen) softwary Android, nastawki w druhej rěči čitać, połnowobrazowe pytanje
+app-description=Oficielna aplikacija za Wikipediju za softwaru Android. Wikipedija je swobodna encyklopedija, kotraž přez 20 milionow nastawkow w 280 rěčach wobsahuje a je najwoběrniša  a najwjace wužiwana zběrka wědy, kotruž ludźo su hdy zestajili.\n\nPřiznamjenja: Nastawki składować, zo by móhł je pozdźišo offline čitać, podobne nastawki pytać, dźěl nastawki z druhimi wosobami z pomocu funkcije "Dźělić" (Teilen) softwary Android, nastawki w druhej rěči čitać, połnowobrazowe pytanje.\n\nPósćelće nam swoje komentary přez Twitter  @WikimediaMobile.
 search-results-did-you-mean-label=Měnješe ty:
 search-results-no-results=Žane wuslědki namakane
-# Fuzzy
-search-results-close=Začinić
+search-results-close=Pytanske wuslědki začinić
+search-button=Wikipediju za tutym tekstom přepytać
+search-placeholder=Pytać
