--- a/assets/www/messages/messages-ja.properties
+++ b/assets/www/messages/messages-ja.properties
@@ -8,12 +8,17 @@
 sitename=ウィキペディア
 spinner-loading=読み込み中…
 spinner-retrieving=$1からコンテンツを取得中…
+saved-pages-clear-all=保存したページを全て消去
+saved-pages-close=保存したページの画面を閉じる
 saved-pages-max-warning=保存できるページの最大数に達しました。
 page-saved=$1が保存されました。
 page-already-saved=$1が既に保存されました。
 saved-page-remove-prompt=保存されたページから$1を削除しますか？
+clear-all-history-prompt=履歴を消去しますか？
+clear-all-saved-pages-prompt=保存したページを全て消去しますか？
 saved-page-removed=$1が削除されました。
 saved-pages-title=保存されたページ
+menu-home=ウィキペディアのホームページ
 menu-language=他の言語
 menu-savePage=ページを保存
 menu-savedPages=保存されたページ
@@ -26,6 +31,9 @@ menu-selectText=テキストを選択
 menu-sharePage=ページを共有
 menu-about=解説
 menu-cancel=中止
+menu-output=出力
+menu-sources=入手元
+settings-close=設定画面を閉じる
 settings-title=設定
 settings-app-version-label=アプリケーションのバージョン：
 settings-android-version-label=Androidのバージョン：
@@ -37,22 +45,29 @@ settings-font-size-desc=ページのフォントサイズを設定
 settings-font-size-smaller=小
 settings-font-size-normal=中
 settings-font-size-larger=大
+langlinks-close=他の言語で読む画面を閉じる
 langlinks-title=他の言語で読む
 error-not-available=申し訳ありませんが、このページは利用できません。
 error-offline=オフラインになっています。また、このページは今までに保存されていません。
+error-offline-prompt=ネットワークに接続しているときにもう一度お試しください。
 error-saved-or-online=保存されたページを開くことができます。また、ネットワークに接続することで検索ができます。
 error-not-found=申し訳ありません。この名前のページは存在しません。
 error-not-found-reason=間違ったタイトルを綴ったか、またはこのページが作成されていません。
 error-search-again=別の言葉で検索してください。
 about-page-label=私たちについて
+history-clear-all=履歴を消去
+history-close=履歴画面を閉じる
 history-title=履歴
+about-close=解説画面を閉じる
 about-page-title=解説
 about-version=バージョン
 about-copyright=(C)ウィキメディア財団と貢献する開発者がこのアプリケーションの著作権を所有します。
 about-license=このアプリケーションは、GNU GPL（一般公衆利用許諾）の下でのフリーソフトウェアです。ある条件下では、配布し変更することが歓迎されます。詳細については http://www.gnu.org/licenses/old-licenses/gpl-2.0.html をご覧ください。ソースコードは https://github.com/Wikimedia/WikipediaMobile で利用可能です。
+nearby-close=付近のページ画面を閉じる
 nearby-title=付近のページ
 app-description=Android向けの公式ウィキペディアアプリ。ウィキペディアは280言語で2000万ページ以上の記事があるフリー百科事典です。人類史上もっとも包括的で広く使われている資料集でもあります。\n\n特徴：記事を保存して、オフラインなときにもあとで読める。現在地付近の記事を検索できる。Androidの「共有」機能で記事を共有できる。他言語で記事を読む。フルスクリーン検索。\n\nご意見はTwitterの @WikimediaMobile までどうぞ。
 search-results-did-you-mean-label=もしかして：
 search-results-no-results=見つかりませんでした
-# Fuzzy
-search-results-close=閉じる
+search-results-close=検索結果を閉じる
+search-button=ウィキペディアでこの文字列を検索
+search-placeholder=検索
