--- a/assets/www/messages/messages-lb.properties
+++ b/assets/www/messages/messages-lb.properties
@@ -6,12 +6,17 @@
 sitename=Wikipedia
 spinner-loading=Lueden...
 spinner-retrieving=Inhalt vu(n) $1 eroflueden...
+saved-pages-clear-all=All gespäichert Säite läschen
+saved-pages-close=Ecran matde gespäicherte Säiten zoumaachen
 saved-pages-max-warning=Dir hutt déi maximal Zuel vu Säiten erreecht déi Dir späichere kënnt.
 page-saved=$1 gespäichert.
 page-already-saved=$1 ass scho gespäichert.
 saved-page-remove-prompt=$1 vun de gespäicherte Säiten ewechhuelen?
+clear-all-history-prompt=Historique läschen?
+clear-all-saved-pages-prompt=All gespäichert Säite läschen?
 saved-page-removed=$1 gouf ewechgeholl.
 saved-pages-title=Gespäichert Säiten
+menu-home=Wikipedia-Haaptsäit
 menu-language=Sprooch wiesselen
 menu-savePage=Säit späicheren
 menu-savedPages=Gespäichert Säiten
@@ -24,6 +29,8 @@ menu-selectText=Text eraussichen
 menu-sharePage=Säit mat Aneren deelen
 menu-about=Iwwer
 menu-cancel=Ofbriechen
+menu-sources=Quellen
+settings-close=Ecran mat den Astellungen zoumaachen
 settings-title=Astellungen
 settings-app-version-label=Versioun vum Programm:
 settings-android-version-label=Android-Versioun:
@@ -35,23 +42,28 @@ settings-font-size-desc=Schrëftgréisst fir d'Säit festleeën
 settings-font-size-smaller=Kleng
 settings-font-size-normal=Normal
 settings-font-size-larger=Grouss
+langlinks-close=Den Ecran mat Linken an aner Sproochen zoumaachen
 langlinks-title=Liest den Artikel op ...
 error-not-available=Pardon, dës säit ass net disponibel.
 error-offline=Dir sidd offline sidd an d'Säit gouf virdrun net gespäichert.
+error-offline-prompt=Probéiert w.e.g. nach eng kéier wann Dir mat engem Reseau verbonn sidd.
 error-saved-or-online=Dir kënnt eng gespäichert Säit opmaachen oder on-line goen a sichen.
 error-not-found=Soory, et gëtt keen Artikel mat deem Numm.
 error-not-found-reason=Et kéint sinn datt Dir den Titel vun der Säit flasch aginn hutt, oder d'Säit gouf net ugeluecht.
 error-search-again=sicht w.e.g. no engem anere Begrëff.
 about-page-label=Iwwer Eis
+history-clear-all=Historique läschen
+history-close=Ecran mam Historique zoumaachen
 history-title=Versiounen
+about-close=Den Ecran mat den Informatiounen zum Site zoumaachen
 about-page-title=Iwwer
 about-version=Versioun
 about-copyright=De Copyright (C) vun dësem Programm gehéiert der Wikimedia Foundation an den Entwéckler déi doru geschafft hunn
 about-license=Dëse Programm ass eng Fräi Software no der GNU General Public License. Dir däerft se ënner bestëmmte Konditioune weiderginn oder änneren. Kuckt http://www.gnu.org/licenses/old-licenses/gpl-2.0.html fir méi Detailer. De Quellcode ass op https://github.com/Wikimedia/WikipediaMobile disponibel
 nearby-title=Ähnlech Säiten
-# Fuzzy
-app-description=Offizielle Wikipedia-App fir Android. Wikipedia ass, mat méi wéi 20 Milliounen Artikelen a méi wéi 280 Sproochen, déi verständlechst an am meeschte genotzte Referenzwierk dat Mënsche jee zesummegestallt hunn.\n\nFonctiounen: Artikele späichere fir se spéider ze liesen, No ähnlechen Artikele sichen, mat der Android Fonctioun ''share'' Artikele mat aneren deelen, Artikelen an enger anerer Sprooch liesen, Iwwer de ganzen Ecran sichen
+app-description=Offizielle Wikipedia-App fir Android. Wikipedia ass, mat méi wéi 20 Milliounen Artikelen a méi wéi 280 Sproochen, déi verständlechst an am meeschte genotzte Referenzwierk dat Mënsche jee zesummegestallt hunn.\n\nFonctiounen: Artikele späichere fir se spéider ze liesen, No ähnlechen Artikele sichen, mat der Android Fonctioun ''share'' Artikele mat aneren deelen, Artikelen an enger anerer Sprooch liesen, Iwwer de ganzen Ecran sichen\n\nSchéckt eis Äre Feedback op Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Mengt Dir:
 search-results-no-results=Näischt fonnt
-# Fuzzy
-search-results-close=Zoumaachen
+search-results-close=Resultater vum Sichen zoumaachen
+search-button=Op Wikipedia no dësem Text sichen
+search-placeholder=Sichen
