--- a/assets/www/messages/messages-ms.properties
+++ b/assets/www/messages/messages-ms.properties
@@ -6,12 +6,17 @@
 sitename=Wikipedia
 spinner-loading=Sedang dimuatkan...
 spinner-retrieving=Kandungan dari $1 sedang diterima...
+saved-pages-clear-all=Padamkan semua laman tersimpan
+saved-pages-close=Tutup skrin laman tersimpan
 saved-pages-max-warning=Anda telah mencapai bilangan bilangan maksimum laman tersimpan.
 page-saved=$1 disimpan.
 page-already-saved=$1 sudah disimpan.
 saved-page-remove-prompt=Buang $1 daripada laman-laman tersimpan?
+clear-all-history-prompt=Padamkan sejarah?
+clear-all-saved-pages-prompt=Padamkan semua laman tersimpan?
 saved-page-removed=$1 telah dibuang.
 saved-pages-title=Laman tersimpan
+menu-home=Laman utama Wikipedia
 menu-language=Tukar bahasa
 menu-savePage=Simpan laman
 menu-savedPages=Laman tersimpan
@@ -24,6 +29,9 @@ menu-selectText=Pilih teks
 menu-sharePage=Kongsi laman
 menu-about=Perihal
 menu-cancel=Batalkan
+menu-output=Output
+menu-sources=Sumber
+settings-close=Tutup skrin tetapan
 settings-title=Tetapan
 settings-app-version-label=Versi aplikasi:
 settings-android-version-label=Versi Android:
@@ -35,23 +43,29 @@ settings-font-size-desc=Tetapkan saiz huruf rencana
 settings-font-size-smaller=Kecil
 settings-font-size-normal=Biasa
 settings-font-size-larger=Besar
+langlinks-close=Tutup skrin baca dalam bahasa lain
 langlinks-title=Baca rencana ini dalam...
 error-not-available=Maaf, laman ini tiada.
 error-offline=Talian anda terputus dan laman ini belum disimpan sebelum ini.
+error-offline-prompt=Sila cuba lagi apabila anda bersambung dengan rangkaian.
 error-saved-or-online=Anda boleh membuka laman yang tersimpan, atau sambungkan talian untuk mencari.
 error-not-found=Maaf, tiada rencana yang bernama ini.
 error-not-found-reason=Sama ada anda tersalah eja tajuknya, atau rencana itu belum diwujudkan.
 error-search-again=Sila cari bahan yang lain.
 about-page-label=Perihal Kami
+history-clear-all=Padamkan sejarah
+history-close=Tutup skrin sejarah
 history-title=Sejarah
+about-close=Tutup skrin perihal
 about-page-title=Perihal
 about-version=Versi
 about-copyright=(C) Hak cipta Yayasan Wikimedia dan para pembangun yang memberikan sumbangan
 about-license=Aplikasi ini merupakan perisian percuma di bawah Lesen Awam Am GNU. Anda dialu-alukan untuk mengedarkan dan mengubahsuainya asalkan mematuhi syarat-syarat tertentu. Rujuk http://www.gnu.org/licenses/old-licenses/gpl-2.0.html untuk butiran lanjut. Kod sumber terdapat di https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Tutup skrin laman berdekatan
 nearby-title=Laman berdekatan
-# Fuzzy
-app-description=Aplikasi Wikipedia yang rasmi untuk Android. Wikipedia merupakan ensiklopedia bebas yang mengandungi lebih daripada 20 juta rencana dalam 280 bahasa. Ia merupakan karya rujukan yang paling menyeluruh dan paling laris digunakan yang pernah dihimpunkan oleh manusia.\n\nCiri-ciri: Simpan rencana untuk dibaca pada masa yang lain atau ketika tidak bersambung dengan Internet; Cari rencana yang berdekatan; Kongsikan rencana dengan menggunakan fungsi Kongsi (Share) dalam Android, Baca rencana dalam bahasa lain, Carian skrin penuh
+app-description=Aplikasi Wikipedia yang rasmi untuk Android. Wikipedia merupakan ensiklopedia bebas yang mengandungi lebih daripada 20 juta rencana dalam 280 bahasa. Ia merupakan karya rujukan yang paling menyeluruh dan paling laris digunakan yang pernah dihimpunkan oleh manusia.\n\nCiri-ciri: Simpan rencana untuk dibaca pada masa yang lain atau ketika tidak bersambung dengan Internet; Cari rencana yang berdekatan; Kongsikan rencana dengan menggunakan fungsi Kongsi (Share) dalam Android, Baca rencana dalam bahasa lain, Carian sepenuh skrin dsb.\n\nHantar maklum balas anda kepada kami di Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Adakah maksud anda:
 search-results-no-results=Tiada hasil carian
-# Fuzzy
-search-results-close=Tutup
+search-results-close=Tutup hasil carian
+search-button=Cari teks ini di Wikipedia
+search-placeholder=Cari
