--- a/assets/www/messages/messages-nl.properties
+++ b/assets/www/messages/messages-nl.properties
@@ -9,12 +9,17 @@
 sitename=Wikipedia
 spinner-loading=Bezig met laden...
 spinner-retrieving=Bezig met ophalen van inhoud van $1...
+saved-pages-clear-all=Alle opgeslagen pagina's verwijderen
+saved-pages-close=Scherm met opgeslagen pagina's sluiten
 saved-pages-max-warning=U hebt het maximum aantal opgeslagen pagina's bereikt.
 page-saved=$1 is opgeslagen.
 page-already-saved=$1 is al opgeslagen.
 saved-page-remove-prompt=$1 uit de opgeslagen pagina's verwijderen?
+clear-all-history-prompt=Geschiedenis wissen?
+clear-all-saved-pages-prompt=Alle opgeslagen pagina's verwijderen?
 saved-page-removed=$1 is uit de opgeslagen pagina's verwijderd.
 saved-pages-title=Opgeslagen pagina's
+menu-home=Wikipedia startpagina
 menu-language=Taal wijzigen
 menu-savePage=Pagina opslaan
 menu-savedPages=Opgeslagen pagina's
@@ -27,6 +32,9 @@ menu-selectText=Tekst selecteren
 menu-sharePage=Pagina delen
 menu-about=Over
 menu-cancel=Annuleren
+menu-output=Uitvoer
+menu-sources=Bronnen
+settings-close=Instellingenscherm sluiten
 settings-title=Instellingen
 settings-app-version-label=Programmaversie:
 settings-android-version-label=Androidversie:
@@ -38,23 +46,29 @@ settings-font-size-desc=Stel de lettergrootte in
 settings-font-size-smaller=Klein
 settings-font-size-normal=Normaal
 settings-font-size-larger=Groot
+langlinks-close=Scherm "In andere talen lezen" sluiten
 langlinks-title=Artikel lezen in het...
 error-not-available=Deze pagina is niet beschikbaar.
 error-offline=U bent offline en de pagina is nog niet eerder opgeslagen.
+error-offline-prompt=Probeer het opnieuw als u verbinding hebt met een netwerk.
 error-saved-or-online=U kunt een opgeslagen pagina openen of u kunt online gaan en zoeken.
 error-not-found=Helaas, er bestaat geen artikel met die naam.
 error-not-found-reason=U hebt misschien de titel verkeerd gespeld, of het artikel bestaat nog niet.
 error-search-again=Zoek naar een ander trefwoord.
 about-page-label=Over ons
+history-clear-all=Geschiedenis wissen
+history-close=Geschiedenisscherm sluiten
 history-title=Geschiedenis
+about-close=Scherm "Over" sluiten
 about-page-title=Over
 about-version=Versie
 about-copyright=(c) De auteursrechten van dit programma liggen bij de Wikimedia Foundation en de ontwikkelaars
 about-license=Dit programma is vrije software onder de licentie GNU General Public License. U mag deze software verspreiden en aanpassen onder bepaalde voorwaarden. Zie http://www.gnu.org/licenses/old-licenses/gpl-2.0.html voor details. De broncode is beschikbaar via de volgende verwijzing: https://github.com/Wikimedia/WikipediaMobile.
+nearby-close=Scherm "Nabijgelegen pagina's" sluiten
 nearby-title=Pagina's in de buurt
-# Fuzzy
-app-description=Officiële Wikipedia-toepassing voor Android. Wikipedia is de vrije encyclopedie met meer dan 20 miljoen artikelen in 280 talen, en is het meest uitgebreide en meest gebruikte referentiewerk die mensen ooit hebben samengesteld.\n\nFuncties: Artikelen opslaan om later of offline te lezen, Artikelen in de buurt zoeken, Artikelen delen met de Android-functie "Delen", Artikelen in een andere taal lezen, Zoeken in volledig scherm
+app-description=De officiële Wikipedia-toepassing voor Android. Wikipedia is de vrije encyclopedie met meer dan 20 miljoen artikelen in 280 talen en is het meest uitgebreide en meest gebruikte referentiewerk dat mensen ooit hebben samengesteld.\n\nFuncties: Artikelen opslaan om later of offline te lezen, Artikelen in de buurt zoeken, Artikelen delen met de Androidfunctie "Delen", Artikelen in een andere taal lezen, Zoeken in volledig scherm\n\nStuur ons uw terugkoppeling op Twitter aan @WikimediaMobile.
 search-results-did-you-mean-label=Bedoelde u:
 search-results-no-results=Geen resultaten gevonden
-# Fuzzy
-search-results-close=Sluiten
+search-results-close=Zoekresultaten sluiten
+search-button=In Wikipedia zoeken naar deze tekst
+search-placeholder=Zoeken
