--- a/assets/www/messages/messages-sr-ec.properties
+++ b/assets/www/messages/messages-sr-ec.properties
@@ -6,12 +6,17 @@
 sitename=Википедија
 spinner-loading=Учитавам…
 spinner-retrieving=Преузимам садржај из $1…
+saved-pages-clear-all=Очисти све сачуване странице
+saved-pages-close=Затвори екран са сачуваним страницама
 saved-pages-max-warning=Достигли сте највећи број сачуваних страница.
 page-saved=Страница $1 је сачувана.
 page-already-saved=Страница $1 је већ сачувана.
 saved-page-remove-prompt=Уклонити страницу $1 из сачуваних?
+clear-all-history-prompt=Очистити историју?
+clear-all-saved-pages-prompt=Очистити све сачуване странице?
 saved-page-removed=Страница $1 је уклоњена.
 saved-pages-title=Сачуване странице
+menu-home=Главна страна Википедије
 menu-language=Промени језик
 menu-savePage=Сачувај страницу
 menu-savedPages=Сачуване странице
@@ -24,6 +29,9 @@ menu-selectText=Изабери текст
 menu-sharePage=Дели страницу
 menu-about=О програму
 menu-cancel=Откажи
+menu-output=Излаз
+menu-sources=Извори
+settings-close=Затвори екран за подешавања
 settings-title=Поставке
 settings-app-version-label=Верзија програма:
 settings-android-version-label=Верзија Андроида:
@@ -35,23 +43,29 @@ settings-font-size-desc=Промените величину фонта у чла
 settings-font-size-smaller=Мала
 settings-font-size-normal=Нормална
 settings-font-size-larger=Велика
+langlinks-close=Затвори екран за друге језике
 langlinks-title=Прочитајте чланак на…
 error-not-available=Нажалост, ова страница није доступна.
 error-offline=Вероватно сте ван мреже, а страница није претходно сачувана.
+error-offline-prompt=Покушајте поново када будете повезани на интернет.
 error-saved-or-online=Можете да отворите сачувану страницу или да претражите чланак на мрежи.
 error-not-found=Нажалост, не постоји чланак с тим именом.
 error-not-found-reason=Можда се погрешни написали наслов, или пак може бити да чланак не постоји.
 error-search-again=Претражите други појам.
 about-page-label=О нама
+history-clear-all=Очисти историју
+history-close=Очисти екран за историју
 history-title=Историја
+about-close=Затвори екран о програму
 about-page-title=О програму
 about-version=Верзија
 about-copyright=Сва права задржана © Задужбина Викимедија и развојни програмери
 about-license=Овај програм је слободан и доступан је под ГНУ-овом општом јавном лиценцом. Слободно можете да га расподељујете и мењате под одређеним условима. Погледајте http://www.gnu.org/licenses/old-licenses/gpl-2.0.html за више информација. Изворни код се налази на https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Затвори екран за околне странице
 nearby-title=Околне странице
-# Fuzzy
-app-description=Званичан програм за прегледање Википедије на Андроиду. Википедија је слободна енциклопедија која садржи преко 20 милиона чланака на 280 језика. Она је најобимније и најкорисније приручно дело у историји човечанства.\n\nМогућности: чување чланака за касније читање ван мреже, претраживање околних чланака, дељење чланака с функцијом „Дели страницу“, читање чланака на различитим језицима, претраживање на целом екрану итд.
+app-description=Званичан програм за прегледање Википедије на Андроиду. Википедија је слободна енциклопедија која садржи преко 20 милиона чланака на 280 језика. Она је најобимније и најкорисније приручно дело у историји човечанства.\n\nМогућности: чување чланака за касније читање ван мреже, претраживање околних чланака, дељење чланака с функцијом „Дели страницу“, читање чланака на различитим језицима, претраживање на целом екрану итд.\n\nПошаљите нам повратну информацију на Твитер (@WikimediaMobile).
 search-results-did-you-mean-label=Да ли сте мислили на:
 search-results-no-results=Нема резултата
-# Fuzzy
-search-results-close=Затвори
+search-results-close=Затвори резултате
+search-button=Претражи текст на Википедији
+search-placeholder=Претражи
