--- a/assets/www/messages/messages-sv.properties
+++ b/assets/www/messages/messages-sv.properties
@@ -6,12 +6,17 @@
 sitename=Wikipedia
 spinner-loading=Läser in...
 spinner-retrieving=Hämtar innehåll från $1...
+saved-pages-clear-all=Rensa alla sparade sidor
+saved-pages-close=Stäng skärmen med sparade sidor
 saved-pages-max-warning=Du har nått det maximala antalet sparade sidor.
 page-saved=$1 sparades.
 page-already-saved=$1 redan sparat.
 saved-page-remove-prompt=Ta bort $1 från sparade sidor?
+clear-all-history-prompt=Rensa historik?
+clear-all-saved-pages-prompt=Rensa alla sparade sidor?
 saved-page-removed=$1 har tagits bort.
 saved-pages-title=Sparade sidor
+menu-home=Wikipedias hemsida
 menu-language=Ändra språk
 menu-savePage=Spara sidan
 menu-savedPages=Sparade sidor
@@ -24,6 +29,9 @@ menu-selectText=Markera text
 menu-sharePage=Dela sidan
 menu-about=Om
 menu-cancel=Avbryt
+menu-output=Utdata
+menu-sources=Källor
+settings-close=Stäng inställningsskärmen
 settings-title=Inställningar
 settings-app-version-label=Programversion:
 settings-android-version-label=Android-version:
@@ -35,23 +43,29 @@ settings-font-size-desc=Ange artikelns teckenstorlek
 settings-font-size-smaller=Liten
 settings-font-size-normal=Normal
 settings-font-size-larger=Stor
+langlinks-close=Stäng skärmen för att läsa på andra språk
 langlinks-title=Läs artikel i...
 error-not-available=Tyvärr, den här sidan inte tillgänglig.
 error-offline=Du är offline och sidan har inte sparats.
+error-offline-prompt=Var god försök igen när du har anslutit till ett nätverk.
 error-saved-or-online=Du kan öppna en sparad sida eller bli online och söka.
 error-not-found=Tyvärr, det finns ingen artikel med detta namn.
 error-not-found-reason=Du kanske har stavat fel på titeln, eller så har artikeln inte skapats.
 error-search-again=Var god sök efter en annan term.
 about-page-label=Om oss
+history-clear-all=Rensa historik
+history-close=Stäng historikskärmen
 history-title=Historik
+about-close=Stäng om-skärmen
 about-page-title=Om
 about-version=Version
 about-copyright=Denna applikation är copyright (C) Wikimedia Foundation och bidragande utvecklare
 about-license=Denna applikation är fri programvara under licensen GNU General Public License. Du är välkommen att sprida och ändra den under vissa förhållanden. Se http://www.gnu.org/licenses/old-licenses/gpl-2.0.html för detaljer. Källkoden finns tillgänglig på https://github.com/Wikimedia/WikipediaMobile
+nearby-close=Stäng skärmen för närliggande sidor
 nearby-title=Närliggande sidor
-# Fuzzy
-app-description=Officiell Wikipedia-app för Android. Wikipedia är den fria encyklopedin som innehåller mer än 20 miljoner artiklar på 280 språk, och är det mest omfattande och utbredda referensarbetet människan någonsin har framställt.\n\nFunktioner: Spara artiklar för att läsa senare eller offline, Sök efter närliggande artiklar, Dela artiklar med hjälp av Androids "Dela"-funktion, Läs artikeln på ett annat språk, Helskärmssökning
+app-description=Officiell Wikipedia-app för Android. Wikipedia är den fria encyklopedin som innehåller mer än 20 miljoner artiklar på 280 språk, och är det mest omfattande och utbredda referensarbetet människan någonsin har framställt.\n\nFunktioner: Spara artiklar för att läsa senare eller offline, sök efter närliggande artiklar, dela artiklar med hjälp av Androids "Dela"-funktion, läs artikeln på ett annat språk samt helskärmssökning.\n\nSkicka din feedback till oss på Twitter @WikimediaMobile.
 search-results-did-you-mean-label=Menade du:
 search-results-no-results=Inga resultat hittades
-# Fuzzy
-search-results-close=Stäng
+search-results-close=Stäng sökresultaten
+search-button=Sök på Wikipedia med denna text
+search-placeholder=Sök
