--- a/assets/www/messages/messages-tr.properties
+++ b/assets/www/messages/messages-tr.properties
@@ -7,22 +7,32 @@
 sitename=Vikipedi
 spinner-loading=Yükleniyor...
 spinner-retrieving=$1 içeriği geri alınıyor...
+saved-pages-clear-all=Tüm kaydedilen sayfaları temizle
+saved-pages-close=Kaydedilen sayfa ekranlarını kapat
 saved-pages-max-warning=Kaydedebileceğiniz sayfa miktarı sınırına ulaştınız.
 page-saved=$1 kaydedildi.
 page-already-saved=$1 zaten kaydedilmiş.
 saved-page-remove-prompt=$1 adlı sayfayı kayıtlı sayfalardan kaldırmak ister misiniz?
+clear-all-history-prompt=Geçmiş silinsin mi?
+clear-all-saved-pages-prompt=Tüm kaydedilen sayfalar silinsin mi?
 saved-page-removed=$1 kaldırılmıştır.
 saved-pages-title=Kayıtlı sayfalar
+menu-home=Vikipedi ana sayfası
 menu-language=Dil:
 menu-savePage=Sayfayı kaydet
 menu-savedPages=Kayıtlı sayfalar
 menu-history=Geçmiş
+menu-back=Geri
 menu-forward=İleri
 menu-nearby=Yakınındakiler
 menu-settings=Ayarlar
 menu-selectText=Metni seçin
 menu-sharePage=Sayfayı paylaş
 menu-about=Hakkında
+menu-cancel=İptal
+menu-output=Çıkış
+menu-sources=Kaynaklar
+settings-close=Ayarlar ekranını kapat
 settings-title=Ayarlar
 settings-app-version-label=Uygulama sürümü:
 settings-android-version-label=Android sürümü:
@@ -34,12 +44,26 @@ settings-font-size-desc=Makale yazı tipi boyutunu belirleyin
 settings-font-size-smaller=Küçük
 settings-font-size-normal=Normal
 settings-font-size-larger=Büyük
+langlinks-close=Başka bir dilde okuma ekranını kapat
 langlinks-title=Makaleyi şu dilde okuyun...
 error-not-available=Üzgünüz, bu sayfa şu anda görüntülenememektedir.
 error-offline=Çevrimdışısınız ve sayfa daha önce kaydedilmedi.
+error-offline-prompt=Lütfen bir ağa bağlıyken tekrar deneyin.
 error-saved-or-online=Kayıtlı bir sayfayı açın ya da çevrimiçi olun ve arayın.
 error-not-found=Üzgünüz, bu isimde bir makale bulunmamaktadır.
 error-not-found-reason=Başlığı yanlış yazmış olabilirsiniz veya makale oluşturulmamıştır.
 error-search-again=Lütfen başka bir sözcük arayın.
+about-page-label=Hakkımızda
+history-clear-all=Geçmişi sil
+history-close=Geçmiş ekranını kapat
 history-title=Geçmiş
+about-close=Hakkında ekranını kapat
+about-page-title=Hakkında
 about-version=Sürüm
+about-copyright=Bu uygulamanın telif hakkı (C) Wikimedia Vakfı ve katkıda bulunan geliştiricilere aittir.
+about-license=Bu uygulama, GNU Genel Kamu Lisansı altında ücretsiz bir yazılımdır. Belirli koşullar altında dağıtabilir ve değiştirebilirsiniz. Ayrıntılar için http://www.gnu.org/licenses/old-licenses/gpl-2.0.html sitesine bakınız. Uygulamanın kaynak kodu https://github.com/Wikimedia/WikipediaMobile sitesinde mevcuttur.
+search-results-did-you-mean-label=Bunu mu demek istediniz:
+search-results-no-results=Sonuç bulunamadı
+search-results-close=Arama sonuçlarını kapat
+search-button=Bu metin için Vikipedi'de arama yapın
+search-placeholder=Ara
